--- a/zh-CN/7.reference/2.administrator-guide/7.management/3.daily-inspection/12.full-link-detection/3.full-link-diagnosis.md
+++ b/zh-CN/7.reference/2.administrator-guide/7.management/3.daily-inspection/12.full-link-detection/3.full-link-diagnosis.md
@@ -1,10 +1,10 @@
 # 全链路追踪方法
 
-运维人员可根据需要，通过使用 PL/SQL 程序包 DBMS_MONITOR 中相关方法，控制相关应用程序不同标识信息维度是否开启全链路追踪 trace，以及该 trace 的打点和相关信息打印到 trace 日志的策略。日志打印会根据采样频率判断是否会被采样并记录到内存中，有一定的概率打印到 trace 日志中。
+运维人员可根据需要，通过使用 PL/SQL 程序包 `DBMS_MONITOR` 中相关方法，控制相关应用程序不同标识信息维度是否开启全链路追踪 trace，以及该 trace 的打点和相关信息打印到 trace 日志的策略。日志打印会根据采样频率判断是否会被采样并记录到内存中，有一定的概率打印到 trace 日志中。
 
 ## trace 打开和关闭操作
 
-您可以通过调用 DBMS_MONITOR 包下的 trace 相关方法实现 trace 不同级别的开关模式。
+您可以通过调用 `DBMS_MONITOR` 包下的 trace 相关方法实现 trace 不同级别的开关模式。
 
 在这里介绍下方法中涉及到的相关变量定义：
 
@@ -23,11 +23,11 @@
 * `sample_pct`：控制采样频率，取值范围为 \[0,1\]。
 
 * `record_policy`: 日志打印策略，即 trace 信息输出到日志文件中策略, 支持以下 3 种策略。
-  * ALL，所有 span 和 tag 信息均打印到日志文件中, 并且是在每个 span 结束时, 就打印到日志文件中。
+  * `ALL`：所有 span 和 tag 信息均打印到日志文件中, 并且是在每个 span 结束时, 就打印到日志文件中。
 
-  * ONLY_SLOW_QUERY，当前请求为 slow query ，则该部分信息的span 和 tag 会打印到日志文件中。
+  * `ONLY_SLOW_QUERY`：当前请求为 slow query ，则该部分信息的span 和 tag 会打印到日志文件中。
 
-  * SAMPLE_AND_SLOW_QUERY，当前请求为 slow query 则该部分信息的span 和 tag 会打印到日志文件中；其他请求信息的 span 和 tag 有一定的概率会打印到日志文件中。
+  * `SAMPLE_AND_SLOW_QUERY`：当前请求为 slow query 则该部分信息的span 和 tag 会打印到日志文件中；其他请求信息的 span 和 tag 有一定的概率会打印到日志文件中。
 
 更多的内容请参见相关 DBMS_MONITOR 包的定义。
 
@@ -73,7 +73,7 @@
   record_policy IN VARCHAR2);
   ```
 
-  示例：记录 client_id 为 jdbc 的相关耗时等信息，采样频率为 50%，并且只记录 slow query，具体 SQL 如下。
+  示例：记录 `client_id` 为 jdbc 的相关耗时等信息，采样频率为 50%，并且只记录 slow query，具体 SQL 如下。
 
   ```unknow
   call dbms_monitor.ob_client_id_trace_enable('jdbc',1,0.5,'ONLY_SLOW_QUERY');
@@ -85,7 +85,7 @@
   DBMS_MONITOR.OB_CLIENT_ID_TRACE_DISABLE(client_id IN  VARCHAR2);
   ```
 
-  示例：关闭 client_id 为 jdbc 的 trace。
+  示例：关闭 `client_id` 为 jdbc 的 trace。
 
   ```unknow
   call dbms_monitor.ob_client_id_trace_disable('jdbc');
@@ -104,7 +104,7 @@
   record_policy IN VARCHAR2);
   ```
 
-  示例：记录 module_name 为 backup，action_name 为 insert的相关耗时等信息，采样频率为 50%，并且只记录 slow query，具体 SQL 如下。其中的 module_name 和 action_name 通过 dbms_application_info 包的SET_MODULE 方法设置。
+  示例：记录 `module_name` 为 backup，`action_name` 为 insert 的相关耗时等信息，采样频率为 50%，并且只记录 slow query，具体 SQL 如下。其中的 `module_name` 和 `action_name` 通过 `dbms_application_info` 包的 `SET_MODULE` 方法设置。
 
   ```unknow
   call dbms_application_info.set_module('backup','insert');
@@ -119,7 +119,7 @@
   action_name     IN  VARCHAR2 DEFAULT ALL_ACTIONS);
   ```
 
-  示例：关闭 module_name 为 backup，action_name 为 insert 的 trace。
+  示例：关闭 `module_name` 为 backup，`action_name` 为 insert 的 trace。
 
   ```unknow
   call dbms_monitor.ob_mod_act_trace_disable('backup','insert');
@@ -148,7 +148,7 @@
   DBMS_MONITOR.OB_TENANT_TRACE_DISABLE(tenant_name  IN VARCHAR2 DEFAULT NULL);
   ```
 
-  示例：关闭租户名为 ORACLE 的 trace。
+  示例：关闭租户名为 `ORACLE` 的 trace。
 
   ```unknow
   call dbms_monitor.ob_tenant_trace_disable('ORACLE'); 
@@ -160,7 +160,7 @@
   call dbms_monitor.ob_tenant_trace_disable(); 
   ```
 
-相关日志信息输出到 trace.log，具体内容示例如下：
+相关日志信息输出到 `trace.log`，具体内容示例如下：
 
 ```unknow
 [20xx-0x-xx 00:07:46.027232] [1751][T1_TNT_L0][T1][YB42AC12050D-0005E42565DA44B2-0-0] {"trace_id":"0005e495-f920-5adc-7cd1-3730afa11dbd","name":"sql_execute","id":"0005e426-2c2b-0755-0000-000000000005","start_ts":1658707664460666,"end_ts":1658707666027098,"parent_id":"0005e426-3355-05b6-0000-000000000002","is_follow":false}
