--- a/zh-CN/6.manage/4.high-availability/4.flashback-query.md
+++ b/zh-CN/6.manage/4.high-availability/4.flashback-query.md
@@ -25,8 +25,8 @@ OceanBase 数据库当前支持用户通过设置租户级配置项 `undo_retent
 1. 租户管理员登录到数据库。
 
    <main id="notice" type='explain'>
-        <h4>说明</h4>
-        <p>MySQL 租户的管理员用户为 <code>root</code> 用户，Oracle 租户的管理员用户为 <code>SYS<code> 用户。</p>
+      <h4>说明</h4>
+      <p>MySQL 租户的管理员用户为 <code>root</code> 用户，Oracle 租户的管理员用户为 <code>SYS</code> 用户。</p>
    </main>
 
    连接示例如下，连接数据库时请以实际环境为准。
