--- a/zh-CN/7.reference/1.oceanbase-database-concepts/10.high-data-reliability-and-availability/1.high-availability-architecture/6.automatic-handling-of-node-faults.md
+++ b/zh-CN/7.reference/1.oceanbase-database-concepts/10.high-data-reliability-and-availability/1.high-availability-architecture/6.automatic-handling-of-node-faults.md
@@ -6,13 +6,13 @@
 
 ## 节点状态监测
 
-作为集群的中控服务，Root Service 负责集群的 节点管理，各节点通过心跳数据包（heartbeat）的方式，定期（每 2s）向 Root Service 汇报自己的进程状态，Root Service 通过监测节点的心跳数据包，来获取当前 observer 进程的工作状态。
+作为集群的中控服务，Root Service 负责集群的节点管理，各节点通过心跳数据包（heartbeat）的方式，定期（每 2s）向 Root Service 汇报自己的进程状态，Root Service 通过监测节点的心跳数据包，来获取当前 observer 进程的工作状态。
 
 ### 节点心跳状态相关配置项
 
-* lease_time：当 Root Service 累计超过 lease_time 时间没有收到过某节点的任意心跳数据包时，Root Service 认为该 observer进程短暂断线，Root Service 会标记该节点的心跳状态为 lease_expired。
+* `lease_time`：当 Root Service 累计超过 `lease_time` 时间没有收到过某节点的任意心跳数据包时，Root Service 认为该 observer 进程短暂断线，Root Service 会标记该节点的心跳状态为 `lease_expired`。
 
-* server_permanent_offline_time：当 Root Service 累计超过 server_permanent_offline_time 时间没有收到过某节点的任意心跳数据包时，Root Service 认为该 observer 进程断线，Root Service 会标记该节点的心跳状态为 permanent_offline。
+* `server_permanent_offline_time`：当 Root Service 累计超过 `server_permanent_offline_time` 时间没有收到过某节点的任意心跳数据包时，Root Service 认为该 observer 进程断线，Root Service 会标记该节点的心跳状态为 `permanent_offline`。
 
 ### Root Service 对 OBServer 节点故障的处理
 
