--- a/zh-CN/7.reference/2.administrator-guide/2.basic-database-management/1.manage-clusters/10.view-the-resource-information-of-a-cluster.md
+++ b/zh-CN/7.reference/2.administrator-guide/2.basic-database-management/1.manage-clusters/10.view-the-resource-information-of-a-cluster.md
@@ -16,7 +16,7 @@ OCP 提供了资源管理功能，管理员可以通过该功能查看集群内 
 
 * 单击 **机型** ，可选择集群中不同主机机型。
 
-* 单击刷新图标，可获取 Unit 分布的最新监控数据。
+* 打开 **实时刷新** 开关，Unit 视图将每 1s 刷新一次，您可通过该功能查看 Unit 分布的最新情况。
 
   * 查看集群负载是否均衡：
 
@@ -48,7 +48,7 @@ OCP 提供了资源管理功能，管理员可以通过该功能查看集群内 
 
 ## 资源水位
 
-您在资源使用趋势部分，可以查看 **磁盘、分区副本、CPU** 和 **内存** 的趋势图。其中 CPU 和内存用来展示资源分配情况的趋势，磁盘和分区数量用来展示资源使用情况的趋势。在 CPU 和内存的使用趋势曲线上，鼠标停留在资源变更的时间点，还可以查看当前时间点资源分配相对于上一个资源分配时间点的事件，该事件信息基于两个资源分配数据的差值分析生成，可能并不包含所有关联的事件。
+您在资源使用趋势部分，可以查看 **磁盘**、**CPU** 和 **内存** 的趋势图。其中 CPU 和内存用来展示资源分配情况的趋势，磁盘用来展示资源使用情况的趋势。在 CPU 和内存的使用趋势曲线上，鼠标停留在资源变更的时间点，还可以查看当前时间点资源分配相对于上一个资源分配时间点的事件，该事件信息基于两个资源分配数据的差值分析生成，可能并不包含所有关联的事件。
 
 <main id="notice" type='explain'>
 <h4>说明</h4>
@@ -63,9 +63,9 @@ OCP 提供了资源管理功能，管理员可以通过该功能查看集群内 
 
 * 单击每个趋势图的筛选图标，可分别查看不同 Zone 的资源水位。
 
-![image.png](https://help-static-aliyun-doc.aliyuncs.com/assets/img/zh-CN/5772988061/p199886.png "image.png")
+![资源使用趋势](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/observer-enterprise/V4.1.0/reference/cluster-management/resource-distribution.png)
 
-您可在资源分配部分查看 **租户名、已使用磁盘、已分配 CPU（核）** 和 **已分配内存（G）** ，单击租户名可跳转到对应的租户概览页面。
+您可在 **资源分配** 部分查看 **租户名、已使用磁盘、已分配 CPU（核）** 和 **已分配内存（G）** ，单击租户名可跳转到对应的租户概览页面。
 
 <main id="notice" type='explain'>
 <h4>说明</h4>
