--- a/zh-CN/7.reference/2.administrator-guide/2.basic-database-management/1.manage-clusters/2.manage-clusters.md
+++ b/zh-CN/7.reference/2.administrator-guide/2.basic-database-management/1.manage-clusters/2.manage-clusters.md
@@ -12,7 +12,7 @@
 
   如果当前用户没有该角色权限，请联系管理员为您添加，具体操作方法请参见 OCP 对应版本的《用户指南》文档中的 **编辑用户** 。
 
-## 通过 OCP 查看集群信息
+## 查看集群信息
 
 1. 登录 OCP。
 
@@ -22,7 +22,7 @@
 
 3. 单击待查看的集群名，进入该集群的 **总览** 页面。
 
-   可以进一步查看该集群所属的集群类型、Region 数量、硬件架构、机器数量等信息。
+   可以进一步查看该集群的 OceanBase 数据库版本号、Region 数量、CPU 架构、机器数量等信息。
 
 ## 重启集群
 
@@ -74,7 +74,7 @@
 
 4. 在弹出的 **删除集群** 对话框中，输入 delete。
 
-   ![delete](https://help-static-aliyun-doc.aliyuncs.com/assets/img/zh-CN/3048190061/p168775.png)
+   ![delete](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/observer-enterprise/V4.1.0/reference/cluster-management/delete-ob-cluster.png)
 
 5. 单击 **删除** 。
 
