--- a/zh-CN/7.reference/2.administrator-guide/2.basic-database-management/1.manage-clusters/6.view-the-cluster-topology.md
+++ b/zh-CN/7.reference/2.administrator-guide/2.basic-database-management/1.manage-clusters/6.view-the-cluster-topology.md
@@ -16,7 +16,7 @@ OCP 提供了集群的拓扑图功能，您可以查看集群和租户中各 Zon
 
 ## 集群
 
-集群图标上展示了 OB 集群的 ID、集群类型（主或备）以及集群当前的状态。
+集群图标上展示了集群的 ID、集群类型（主或备）以及集群当前的状态。
 
 备集群图标上方还会展示当前的备库延迟时间。
 
