--- a/zh-CN/7.reference/2.administrator-guide/2.basic-database-management/1.manage-clusters/7.cluster-tenant-management-overview.md
+++ b/zh-CN/7.reference/2.administrator-guide/2.basic-database-management/1.manage-clusters/7.cluster-tenant-management-overview.md
@@ -130,7 +130,7 @@
 
    * 在 **租户列表** 区域，可以查看所有租户的基本信息，包括租户名、租户模式、对应 Zone 的优先级、状态等信息。
 
-     ![16](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/observer-enterprise/V4.0.0/user-guide/tenant-list.png)
+     ![16](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/ocp/401/%E7%A7%9F%E6%88%B7id1.png)
 
    * 在 **租户性能 TOP5** 区域，可以查看当前集群下工作负载最高的 5 个租户的性能信息，包含 TPS、QPS、SQL 响应时间、事务响应时间、活跃会话数、事件等待_次数、事件等待_时间、容量_表数量、容量_分区数量等性能监控指标。
 
@@ -146,7 +146,7 @@
      | TPS      | 平均每秒处理事务数 (次/s)      | `v$sysstat`                 |
      | SQL 响应时间 | SQL 响应时间 （μs)        | `v$sysstat`                 |
      | 事务响应时间   | 服务端每个事务平均处理时间 (μs)   | `v$sysstat`                 |
-     | 活跃会话数    | 活跃会话数 (个)            | `GV$OB_PROCESSLIST` |
+     | 会话数    | 当前活跃会话数（个) 和当前会话数（个）           | `GV$OB_PROCESSLIST` |
      | 事件等待_次数  | 平均每秒等待事件数 (次/s)      | `v$system_event`            |
      | 事件等待_时间  | 平均每个等待事件等待的时间 (μs)   | `v$system_event`            |
      | 容量_表数量   | 表数量（个）               | `CDB_TABLES`                  |
