--- a/zh-CN/7.reference/2.administrator-guide/3.database-object-management/1.manage-object-of-mysql-mode/2.manage-tables-of-mysql-mode/9.lock-table-of-mysql-mode.md
+++ b/zh-CN/7.reference/2.administrator-guide/3.database-object-management/1.manage-object-of-mysql-mode/2.manage-tables-of-mysql-mode/9.lock-table-of-mysql-mode.md
@@ -9,14 +9,15 @@
 
 ## 前提条件
 
-要锁定的表必须在用户自己的 `Schema` 中，或者用户必须具有 <code>LOCK ANY TABLE</code> 系统权限。
+要锁定的表必须在用户自己的 `Schema` 中，或者用户必须具有 `LOCK ANY TABLE` 系统权限。
 
 ## 示例
 
 <main id="notice" type='alert'>
-    <h4>注意</h4>
-    <p>当前版本的 OceanBase 数据库对 MySQL 模式下的 LOCK TABLES 语法只进行了语法解析，并没有对表上锁，也不会对相关操作有任何影响。</p>
-  </main>
+<h4>注意</h4>
+<p>当前版本的 OceanBase 数据库对 MySQL 模式下的 <code>LOCK TABLES</code> 语法只进行了语法解析，并没有对表上锁，也不会对相关操作有任何影响。</p>
+</main>
+
 为 test1 表设置读锁，为 test2 表设置写锁。
 
 ```sql
