--- a/zh-CN/7.reference/2.administrator-guide/3.database-object-management/2.manage-object-of-oracle-mode/1.manage-tables-of-oracle-mode/9.lock-table-of-oracle-mode.md
+++ b/zh-CN/7.reference/2.administrator-guide/3.database-object-management/2.manage-object-of-oracle-mode/1.manage-tables-of-oracle-mode/9.lock-table-of-oracle-mode.md
@@ -10,7 +10,7 @@
 
 ## 前提条件
 
-要锁定的表必须在用户自己的 Schema 中，或者用户必须具有 <code>LOCK ANY TABLE</code> 系统权限。
+要锁定的表必须在用户自己的 Schema 中，或者用户必须具有 `LOCK ANY TABLE` 系统权限。
 
 ## 示例
 
