--- a/zh-CN/7.reference/2.administrator-guide/4.replica-management/4.manage-replicas/3.edit-the-tenant-copy-in-the-zone.md
+++ b/zh-CN/7.reference/2.administrator-guide/4.replica-management/4.manage-replicas/3.edit-the-tenant-copy-in-the-zone.md
@@ -8,7 +8,7 @@
 ALTER RESOURCE POOL pool_name UNIT_NUM [=] unit_num [DELETE UNIT = (unit_id_list)];
 ```
 
-### 修改 Unit 规格的 SQL 语法
+## 修改 Unit 规格的 SQL 语法
 
 ```sql
 ALTER RESOURCE UNIT unit_name
