--- a/zh-CN/6.manage/4.high-availability/5.recyclebin-management/5.purge-the-recyclebin.md
+++ b/zh-CN/6.manage/4.high-availability/5.recyclebin-management/5.purge-the-recyclebin.md
@@ -23,7 +23,7 @@
    <main id="notice" type='explain'>
    <h4>说明</h4>
    <ul>
-   <li>MySQL 租户的管理员用户为 <code>root</code> 用户，Oracle 租户的管理员用户为 <code>SYS<code> 用户。</li>
+   <li>MySQL 租户的管理员用户为 <code>root</code> 用户，Oracle 租户的管理员用户为 <code>SYS</code> 用户。</li>
    <li>如果需要清理租户回收站对象，则需要使用 <code>sys</code> 租户登录数据库。</li>
    </ul>
    </main>
