--- a/zh-CN/7.reference/2.administrator-guide/2.basic-database-management/7.memory-management/5.memory-management-within-a-tenant.md
+++ b/zh-CN/7.reference/2.administrator-guide/2.basic-database-management/7.memory-management/5.memory-management-within-a-tenant.md
@@ -67,7 +67,7 @@ KVCache 一般不需要配置，特殊场景下可以通过参数控制各种 Ca
 | user_row_cache_priority          | `user_row_cache` 在缓存系统中的优先级。   |
 | bf_cache_priority                | Bloom Filter 在缓存系统中的优先级。 |
 | fuse_row_cache_priority          | `fuse_row_cache` 在缓存系统中的优先级。     |
-| opt_table_stat_cache_priority    | `opt_table_stat_cache` 在缓存系统中的优先级。|
+| opt_tab_stat_cache_priority    | `opt_tab_stat_cache` 在缓存系统中的优先级。|
 
 KVCache 中不同类型的 Cache 的信息可以通过查询 `oceanbase.GV$OB_KVCACHE` 视图获得。其中 `sys` 租户和普通租户的重要组成部分略有不同：
 
@@ -90,11 +90,12 @@ KVCache 中不同类型的 Cache 的信息可以通过查询 `oceanbase.GV$OB_KV
 
   |        类别         |                       说明                       |
   |--------------------|--------------------------------------------------|
-  | tablet_ls_cache   | 缓存 Tablet 所属的 Logstream 的 id 。|
   | index_block_cache | 缓存微块的 Index，加速微块数据的访问。                         |
   | user_block_cache  | 缓存微块数据，由于微块可能通过压缩算法进行压缩，为了提升查询性能，缓存的是解压后的微块数据。 |
   | user_row_cache    | 缓存某一个 Table 中的热点行数据。|
   | bf_cache          | 缓存为点查结果为空且超过一定次数的宏块建立的 Bloomfilter ，用于提高空查询的过滤效率。|
   | fuse_row_cache    | 缓存行的快照点数据，用于提高点查询性能，并且可以避免因转储、合并导致的缓存失效问题。     |
+  | tmp_block_cache   | 缓存临时文件，作为写缓冲区以及写缓存。|
+  | tmp_page_cache    | 缓存临时文件， 作为读缓存。  |
   | opt_table_stat_cache| 缓存某一个分区的统计信息，例如行数、宏块数、微块数等。|
   | opt_column_stat_cache| 缓存分区中某一列的统计信息，例如空值数、非空值数、最大值、最小值等。|
