--- a/zh-CN/7.reference/2.administrator-guide/3.database-object-management/1.manage-object-of-mysql-mode/1.manage-databases-of-mysql-mode/2.view-a-database-of-mysql-mode.md
+++ b/zh-CN/7.reference/2.administrator-guide/3.database-object-management/1.manage-object-of-mysql-mode/1.manage-databases-of-mysql-mode/2.view-a-database-of-mysql-mode.md
@@ -2,29 +2,31 @@
 
 本节主要介绍 MySQL 模式中数据库的查看语句及操作方法。
 
-## 使用 SQL 语句查看数据库
+## 操作步骤
 
-用 `root` 用户登录集群的 `sys` 租户使用 `SHOW DATABASES` 语句查看 MySQL 模式下租户的数据库信息。
+1. 用户登录集群的 MySQL 租户。
 
-示例如下：
+2. 使用 `SHOW DATABASES` 语句查看 MySQL 模式下租户的数据库信息。
 
-```sql
-obclient> SHOW DATABASES;
-+--------------------+
-| Database           |
-+--------------------+
-| oceanbase          |
-| information_schema |
-| mysql              |
-| test               |
-+--------------------+
-3 rows in set
-```
+   示例如下：
 
-* `information_schema` 数据库是 MySQL 自带的，它提供了访问数据库元数据的方式。
+   ```shell
+   obclient> SHOW DATABASES;
+   +--------------------+
+   | Database           |
+   +--------------------+
+   | oceanbase          |
+   | information_schema |
+   | mysql              |
+   | test               |
+   +--------------------+
+   3 rows in set
+   ```
 
-* `oceanbase` 库，存储 OceanBase 数据库的相关系统表。
+   * `information_schema` 数据库是 MySQL 自带的，它提供了访问数据库元数据的方式。
 
-* `mysql` 库主要负责存储数据库的用户、权限设置、关键字等。
+   * `oceanbase` 库，存储 OceanBase 数据库的相关系统表。
 
-* `test` 库是用户自己创建的库。
+   * `mysql` 库主要负责存储数据库的用户、权限设置、关键字等。
+
+   * `test` 库是用户自己创建的库。
