--- a/zh-CN/7.reference/2.administrator-guide/3.database-object-management/1.manage-object-of-mysql-mode/1.manage-databases-of-mysql-mode/3.modify-a-database-of-mysql-mode.md
+++ b/zh-CN/7.reference/2.administrator-guide/3.database-object-management/1.manage-object-of-mysql-mode/1.manage-databases-of-mysql-mode/3.modify-a-database-of-mysql-mode.md
@@ -2,20 +2,28 @@
 
 本节主要介绍 MySQL 模式中数据库的修改语句及操作方法。
 
-## 通过 SQL 语句修改数据库
+## 前提条件
 
-您可以使用 `ALTER DATABASE` 语句来修改 MySQL 模式下租户的数据库属性。
+请确认当前用户拥有 `ALTER` 权限。查看当前拥有的权限的操作请参见 [查看用户权限](../../../2.basic-database-management/4.manage-tenants/5.manage-users-and-permissions/3.mysql-mode/4.view-user-permissions-of-mysql-mode.md)。如果您没有 `ALTER` 权限，请联系管理员为您添加，为用户添加权限的相关操作请参见 [修改用户权限](../../../2.basic-database-management/4.manage-tenants/5.manage-users-and-permissions/3.mysql-mode/5.modify-user-permissions-of-mysql-mode.md)。
 
-示例如下：
+## 操作步骤
 
-修改数据库 `test2` 的字符集为 `UTF8MB4`，校对规则为 `UTF8MB4_BIN`，且为读写属性。
+1. 用户登录集群的 MySQL 租户。
 
-```sql
-obclient> ALTER DATABASE test2 DEFAULT CHARACTER SET UTF8MB4;
+2. 使用 `ALTER DATABASE` 语句修改数据库属性。
 
-obclient> ALTER DATABASE test2 DEFAULT COLLATE UTF8MB4_BIN;
+   示例如下：
 
-obclient> ALTER DATABASE test2 READ WRITE;
-```
+   修改数据库 `test2` 的字符集为 `UTF8MB4`，校对规则为 `UTF8MB4_BIN`，且为读写属性。
+
+   ```sql
+   obclient> ALTER DATABASE test2 DEFAULT CHARACTER SET UTF8MB4;
+
+   obclient> ALTER DATABASE test2 DEFAULT COLLATE UTF8MB4_BIN;
+
+   obclient> ALTER DATABASE test2 READ WRITE;
+   ```
+
+## 相关文档
 
 更多 `ALTER DATABASE` 语句相关的语法说明请参见 [ALTER DATABASE](../../../../4.development-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/3.alter-database-of-mysql-mode.md)。
