--- a/zh-CN/7.reference/2.administrator-guide/3.database-object-management/1.manage-object-of-mysql-mode/1.manage-databases-of-mysql-mode/4.delete-a-database-of-mysql-mode.md
+++ b/zh-CN/7.reference/2.administrator-guide/3.database-object-management/1.manage-object-of-mysql-mode/1.manage-databases-of-mysql-mode/4.delete-a-database-of-mysql-mode.md
@@ -2,16 +2,26 @@
 
 本节主要介绍 MySQL 模式中数据库的修改语句及操作方法。
 
-## 通过 SQL 语句删除数据库
+## 前提条件
 
-您可以使用 `DROP DATABASE` 语句删除 MySQL 模式下租户的数据库。
+请确认当前用户拥有 `DROP` 权限。查看当前拥有的权限的操作请参见 [查看用户权限](../../../2.basic-database-management/4.manage-tenants/5.manage-users-and-permissions/3.mysql-mode/4.view-user-permissions-of-mysql-mode.md)。如果您没有 `DROP` 权限，请联系管理员为您添加，为用户添加权限的相关操作请参见 [修改用户权限](../../../2.basic-database-management/4.manage-tenants/5.manage-users-and-permissions/3.mysql-mode/5.modify-user-permissions-of-mysql-mode.md)。
+
+## 操作步骤
+
+1. 用户登录集群的 MySQL 租户。
+
+2. 使用 `DROP DATABASE` 语句删除数据库。
+
+   示例如下：
+
+   ```shell
+   obclient> DROP DATABASE my_db;    
+   ```
+
+## 后续操作
 
 如果误删数据库，可以通过回收站功能进行恢复，前提是需要开启回收站功能，相关操作请参见 [恢复回收站对象](../../../../../6.manage/4.high-availability/3.recyclebin-management/4.restore-the-recyclebin-objects.md)。
 
-示例如下：
-
-```sql
-obclient> DROP DATABASE my_db;    
-```
+## 相关文档
 
 更多 `DROP DATABASE` 语句相关的语法说明请参见 [DROP DATABASE](../../../../4.development-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/23.drop-database-of-mysql-mode.md)。
