--- a/zh-CN/7.reference/2.administrator-guide/4.replica-management/4.manage-replicas/2.add-copy.md
+++ b/zh-CN/7.reference/2.administrator-guide/4.replica-management/4.manage-replicas/2.add-copy.md
@@ -4,7 +4,7 @@
 
 如果租户已在所属集群的全部 Zone 上设置了副本，则不支持再新增副本。
 
-## 通过 SQL 语句新增副本
+## 背景信息
 
 ### 创建资源单元的 SQL 语法
 
@@ -39,29 +39,31 @@ RESOURCE_POOL_LIST [=](poolname [, poolname...]);
 ALTER TENANT tenant_name LOCALITY [=] 'locality_description';
 ```
 
-### 示例
+## 操作步骤
 
-tenant1 租户当前只有 zone1 上的一个副本，现需要为其在 zone2 上新增一个副本。修改租户 `tenant1` 的 Locality，增加副本数的 SQL 语句如下所示：
+`tenant1` 租户当前只有 `zone1` 上的一个副本，现需要为其在 `zone2` 上新增一个副本。修改租户 `tenant1` 的 Locality，增加副本数的示例如下。
 
-1. 创建资源单元。
+1. 使用 `root` 用户登录集群的 `sys` 租户。
+
+2. 创建资源单元。
 
    ```sql
    obclient> CREATE RESOURCE UNIT unit1 MAX_CPU 4, MIN_CPU 4, MEMORY_SIZE '5G', MAX_IOPS 1024, MIN_IOPS 1024, IOPS_WEIGHT 0, LOG_DISK_SIZE '2G';
    ```
 
-2. 在 zone2 上创建资源池。
+3. 在 zone2 上创建资源池。
 
    ```sql
    obclient> CREATE RESOURCE POOL pool2 UNIT='unit1', UNIT_NUM=1, ZONE_LIST=('zone2');
    ```
 
-3. 为 tenant1 添加 zone2 上的资源池。
+4. 为 tenant1 添加 zone2 上的资源池。
 
    ```sql
    obclient> ALTER TENANT tenant1 resource_pool_list=('pool1','pool2');
    ```
 
-4. 为 tenant1 添加 zone2 上的全能型副本。
+5. 为 tenant1 添加 zone2 上的全能型副本。
 
    ```sql
    obclient> ALTER TENANT tenant1 locality='F@zone1,F@zone2';
