--- a/zh-CN/7.reference/1.oceanbase-database-concepts/5.distributed-database-objects/3.data-partitions-and-replicas/3.partition-replica-type/1.partitioned-replica-overview.md
+++ b/zh-CN/7.reference/1.oceanbase-database-concepts/5.distributed-database-objects/3.data-partitions-and-replicas/3.partition-replica-type/1.partitioned-replica-overview.md
@@ -7,32 +7,30 @@ OceanBase 数据库支持以下四种类型的副本：
 
 * 全能型副本（FULL/F）
 
-* 日志型副本（LOGONLY/L）
-
 * 加密投票型副本（ENCRYPTVOTE/E）
 
 * 只读型副本（READONLY/R）
 
-全能型、日志型、加密投票型副本称为 Paxos 副本，对应副本可构成 Paxos 成员组；只读型副本称为非 Paxos 副本，对应副本不可构成 Paxos 成员组。当前，V4.0.0 版本仅支持全能型副本类型。
+全能型和加密投票型副本称为 Paxos 副本，对应副本可构成 Paxos 成员组；只读型副本称为非 Paxos 副本，对应副本不可构成 Paxos 成员组。当前，V4.0.0 版本仅支持全能型副本类型。
 
 ## 副本类型属性
 
 目前，指定副本类型和位置分布的 Locality 一般语法如下：
 
 ```sql
-locality='F@z1,F@z2,F{1},R{ALL_SERVER}@z3,L@z4,L@z5'
+locality='F@z1,F@z2,F{1},R{ALL_SERVER}@z3'
 ```
 
 在该语法中，允许在副本类型之后的花括弧内限定副本的其他属性。花括弧内的数字表示对应 zone 对应副本类型的副本个数，其中：
 
-* 对于 F、L、E 型副本：该值只能为 1，或者不指定（不指定视作 1）。
+* 对于 F、E 型副本：该值只能为 1，或者不指定（不指定视作 1）。
 
 * 对于 R 型副本：该值上限为租户对应 zone 的可用 unit 数目，或者指定为 ALL_SERVER（表示尽可能在对应 zone 创建 R 副本），或者不指定（不指定视作 1）。
 
 为了限定副本的 MemTable 内存属性，引入一个属性名为 memstore_percent，表示该 **副本 MemStore 占用内存上限与 leader 占用内存上限的比值** 。目前，memstore_percent 属性可以 **作用于 F、R 型副本** ，语法示例如下：
 
 ```sql
-locality='F@z1,F{memstore_percent:0}@z2,F{1,memstore_percent:100},R{ALL_SERVER}@z3,L@z4,L@z5'
+locality='F@z1,F{memstore_percent:0}@z2,F{1,memstore_percent:100},R{ALL_SERVER}@z3'
 ```
 
 目前该属性只有 0 和 100 两种取值：
