--- a/zh-CN/7.reference/4.development-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/60.lock-table-of-mysql-mode.md
+++ b/zh-CN/7.reference/4.development-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/60.lock-table-of-mysql-mode.md
@@ -7,7 +7,7 @@
 <main id="notice" type='explain'>
     <h4>说明</h4>
     <ul>
-      <li>要锁定的表必须在用户自己的 Schema 中，或者用户必须具有 <code>LOCK ANY TABLE</code> 系统权限。</li>
+      <li>用户必须具有 <code>LOCK TABLE</code> 系统权限，该权限由 <code>mysql.user</code> 视图中的 <code>lock_tables_priv</code> 字段控制。</li>
       <li>当前版本的 OceanBase 数据库对 MySQL 模式下的 <code>LOCK TABLES</code> 语句将被忽略，并不会对表上锁。</li>
     </ul>
 </main>
