--- a/zh-CN/7.reference/4.development-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/63.lock-table-of-mysql-mode.md
+++ b/zh-CN/7.reference/4.development-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/63.lock-table-of-mysql-mode.md
@@ -4,10 +4,10 @@
 
 该语句根据指定模式锁定一个或多个表、表的分区或者表的二级分区。
 
->**注意**
->
->* 要锁定的表必须在用户自己的 Schema 中，或者用户必须具有 `LOCK ANY TABLE` 系统权限。
->* 当前版本的 OceanBase 数据库对 MySQL 模式下的 `LOCK TABLES` 语句将被忽略，并不会对表上锁。
+<main id="notice" type='notice'>
+   <h4>注意</h4>
+   <p>当前版本的 OceanBase 数据库对 MySQL 模式下的 <code>LOCK TABLES</code> 语句将被忽略，并不会对表上锁。</p>
+</main>
 
 ## 语法
 
