--- a/zh-CN/7.reference/1.oceanbase-database-concepts/8.transaction-management/1.transaction/2.transaction-structure.md
+++ b/zh-CN/7.reference/1.oceanbase-database-concepts/8.transaction-management/1.transaction/2.transaction-structure.md
@@ -31,7 +31,7 @@ obclient> SELECT trans_id FROM __all_virtual_trans_stat;
 +-----------------------------------------------------------------------------------------+
 | trans_id                                                                                |
 +-----------------------------------------------------------------------------------------+
-| {hash:17242042390259891950, inc:98713, addr:"100.88.106.107:24974", t:1632636623536459} |
+| {hash:17242042390259891950, inc:98713, addr:"xx.xx.xx.xx:24974", t:1632636623536459} |
 +-----------------------------------------------------------------------------------------+
 ```
 
