--- a/zh-CN/7.reference/2.administrator-guide/2.basic-database-management/4.manage-tenants/5.manage-users-and-permissions/1.users-and-permissions/1.users-and-their-permissions.md
+++ b/zh-CN/7.reference/2.administrator-guide/2.basic-database-management/4.manage-tenants/5.manage-users-and-permissions/1.users-and-permissions/1.users-and-their-permissions.md
@@ -41,35 +41,47 @@ MySQL 模式的权限主要有以下三类：
 |  对象权限  | ALTER                  | 确定用户是否可以重命名和修改表结构。                                                                  |
 |  对象权限  | CREATE VIEW            | 确定用户是否可以创建视图。                                                                       |
 |  对象权限  | SHOW VIEW              | 确定用户是否可以查看视图或了解视图如何执行。                                                              |
-| 数据库级权限                 | SELECT                 | 确定用户是否可以查询表中的数据。                                                                    |
-| 数据库级权限                 | INSERT                 | 确定用户是否可以在表中插入行数据。                                                                   |
-| 数据库级权限                 | UPDATE                 | 确定用户是否可以修改现有数据。                                                                     |
-| 数据库级权限                 | DELETE                 | 确定用户是否可以删除现有数据。                                                                     |
-| 数据库级权限                 | CREATE                 | 确定用户是否可以创建数据库和表。                                                                    |
-| 数据库级权限                 | DROP                   | 确定用户是否可以删除现有数据库、表和视图。                                                               |
-| 数据库级权限                 | INDEX                  | 确定用户是否可以创建和删除表索引。                                                                   |
-| 数据库级权限                 | ALTER                  | 确定用户是否可以重命名和修改表结构。                                                                  |
-| 数据库级权限                 | CREATE VIEW            | 确定用户是否可以创建视图。                                                                       |
-| 数据库级权限                 | SHOW VIEW              | 确定用户是否可以查看视图或了解视图如何执行。                                                              |
-|  用户级权限 | CREATE                 | 确定用户是否可以创建数据库和表。                                                                    |
-|  用户级权限 | ALTER                  | 确定用户是否可以重命名和修改表结构。                                                                  |
-|  用户级权限 | SELECT                 | 确定用户是否可以查询表中的数据。                                                                    |
-|  用户级权限 | INSERT                 | 确定用户是否可以在表中插入行数据。                                                                   |
-|  用户级权限 | UPDATE                 | 确定用户是否可以修改现有数据。                                                                     |
-|  用户级权限 | DELETE                 | 确定用户是否可以删除现有数据。                                                                     |
-|  用户级权限 | DROP                   | 确定用户是否可以删除现有数据库、表和视图。                                                               |
-|  用户级权限 | INDEX                  | 确定用户是否可以创建和删除表索引。                                                                   |
-|  用户级权限 | CREATE VIEW            | 确定用户是否可以创建视图。                                                                       |
-|  用户级权限 | SHOW VIEW              | 确定用户是否可以查看视图或了解视图如何执行。                                                              |
-|  用户级权限 | ALTER TENANT           | 修改租户信息的权限。                                                                          |
-|  用户级权限 | ALTER SYSTEM           | 执行 `ALTER SYSTEM` 命令的权限。                                                            |
-|  用户级权限 | CREATE   RESOURCE POOL | 创建、修改和删除资源池的权限。                                                                     |
-|  用户级权限 | CREATE   RESOURCE UNIT | 创建、修改和删除资源单元的权限。                                                                    |
-|  用户级权限 | CREATE USER            | 确定用户是否可以执行 `CREATE USER` 命令，这个命令用于创建新的 MySQL 账号。                                    |
-|  用户级权限 | PROCESS                | 确定用户是否可以通过 `SHOW PROCESSLIST` 命令查看其他用户的进程。                                          |
-|  用户级权限 | SHOW DB                | 确定用户是否可以查看服务器上所有数据库的名字，包括用户拥有足够访问权限的数据库。                                            |
-|  用户级权限 | FILE                   | 确定用户是否可以执行 `SELECT INTO OUTFILE` 和 `LOAD DATA INFILE` 命令。                           |
-|  用户级权限 | SUPER                  | 确定用户是否可以执行某些强大的管理功能，例如通过`KILL`命令删除用户进程，使用 `SET GLOBAL` 修改全局MySQL 变量，执行关于复制和日志的各种命令。 |
+| 数据库级权限                 | SELECT                 | 确定用户是否可以查询表中的数据。    |
+| 数据库级权限                 | INSERT                 | 确定用户是否可以在表中插入行数据。     |
+| 数据库级权限                 | UPDATE                 | 确定用户是否可以修改现有数据。|
+| 数据库级权限                 | DELETE                 | 确定用户是否可以删除现有数据。|
+| 数据库级权限                 | CREATE                 | 确定用户是否可以创建数据库和表。  |
+| 数据库级权限                 | DROP                   | 确定用户是否可以删除现有数据库、表和视图。|
+| 数据库级权限                 | GRANT                  | 确定用户是否可以授予其他用户权限。  |
+| 数据库级权限                 | REFERENCE              | 确定用户是否可以参考数据库或表。 |
+| 数据库级权限                 | INDEX                  | 确定用户是否可以创建和删除表索引。|
+| 数据库级权限                 | ALTER                  | 确定用户是否可以修改数据库和表结构。 |
+| 数据库级权限                 | CREATE_TMP_TABLE       | 确定用户是否可以创建临时表。  |
+| 数据库级权限                 | LOCK_TABLES            | 确定用户是否可以给表加锁。 |
+| 数据库级权限                 | CREATE VIEW            | 确定用户是否可以创建视图。|
+| 数据库级权限                 | SHOW VIEW              | 确定用户是否可以查看视图或了解视图如何执行。 |
+| 数据库级权限                 | CREATE_ROUTINE         | 确定用户是否可以创建存储过程和函数。 |
+| 数据库级权限                 | ALTER ROUTINE          | 确定用户是否可以修改存储过程和函数。 |
+| 数据库级权限                 | EXECUTE                | 确定用户是否可以执行存储过程、函数和系统包。 |
+| 数据库级权限                 | EVENT                  | 确定用户是否可以创建、修改和删除事件。 |
+| 数据库级权限                 | TRIGGER                | 确定用户是否可以创建、修改和删除触发器。 |
+| 用户级权限 | SELECT                 | 确定用户是否可以查询表中的数据。                                                                    |
+| 用户级权限 | INSERT                 | 确定用户是否可以在表中插入行数据。                                                                   |
+| 用户级权限 | UPDATE                 | 确定用户是否可以修改现有数据。                                                                     |
+| 用户级权限 | DELETE                 | 确定用户是否可以删除现有数据。                                                                     |
+| 用户级权限 | CREATE                 | 确定用户是否可以创建数据库和表。                                                                    |
+| 用户级权限 | DROP                   | 确定用户是否可以删除现有数据库、表和视图。                                                               |
+| 用户级权限 | PROCESS                | 确定用户是否可以通过 `SHOW PROCESSLIST` 命令查看其他用户的进程。                                          |
+| 用户级权限 | FILE                   | 确定用户是否可以执行 `SELECT INTO OUTFILE` 和 `LOAD DATA INFILE` 命令。                           |
+| 用户级权限 | CREATE SYNONYM         | 确定用户是否可以创建同义词。                           |
+| 用户级权限 | INDEX                  | 确定用户是否可以创建和删除表索引。                                                                   |
+| 用户级权限 | ALTER                  | 确定用户是否可以修改数据库和表结构。                                                                  |
+| 用户级权限 | SHOW DB                | 确定用户是否可以查看服务器上所有数据库的名字，包括用户拥有足够访问权限的数据库。    |
+| 用户级权限 | SUPER                  | 确定用户是否可以执行某些强大的管理功能，例如通过 `KILL` 命令删除用户进程，使用 `SET GLOBAL` 修改全局 MySQL 变量，执行关于复制和日志的各种命令。 |
+| 用户级权限 | REPLICATION SLAVE      | 确定用户是否可以通过 `SHOW SLAVE STATUS` 命令查看复制状态。  |
+| 用户级权限 | REPLICATION CLIENT     | 确定用户是否可以复制用户。 |
+| 用户级权限 | CREATE VIEW            | 确定用户是否可以创建视图。                                                                       |
+| 用户级权限 | SHOW VIEW              | 确定用户是否可以查看视图或了解视图如何执行。                                                              |
+| 用户级权限 | CREATE USER            | 确定用户是否可以执行 `CREATE USER` 命令，这个命令用于创建新的 MySQL 账号。                                    |
+| 用户级权限 | ALTER TENANT           | 修改租户信息的权限。                                                                          |
+| 用户级权限 | ALTER SYSTEM           | 执行 `ALTER SYSTEM` 命令的权限。                                                            |
+| 用户级权限 | CREATE   RESOURCE POOL | 创建、修改和删除资源池的权限。                                                                     |
+| 用户级权限 | CREATE   RESOURCE UNIT | 创建、修改和删除资源单元的权限。                                                                    |
 
 ## Oracle 租户的用户权限
 
@@ -88,7 +100,7 @@ Oracle 模式的权限主要有以下两类：
 当前 OceanBase 数据库中 Oracle 模式相关的权限列表如下表所示。
 
 | 权限类别 |             功能              |        描述         |
-|------|-----------------------------|-------------------|
+|---------|-------------------------------|---------------------|
 | 对象权限 | ALTER                       | 修改表结构的权限。         |
 | 对象权限 | INSERT                      | 向表、视图中插入数据的权限。    |
 | 对象权限 | UPDATE                      | 修改表、视图中数据的权限。     |
@@ -158,10 +170,12 @@ Oracle 模式的权限主要有以下两类：
 | 系统权限 | ALTER ANY TYPE              | 修改任意类型的权限。        |
 | 系统权限 | DROP ANY TYPE               | 删除任意类型的权限。        |
 | 系统权限 | EXECUTE ANY TYPE            | 执行任意类型的权限。        |
+| 系统权限 | UNDER ANY TYPE              | 访问任意类型的权限。        |
 | 系统权限 | PURGE DBA_RECYCLEBIN        | 清除回收站的权限。         |
 | 系统权限 | CREATE ANY OUTLINE          | 创建任意执行计划的权限。      |
 | 系统权限 | ALTER ANY OUTLINE           | 修改任意执行计划的权限。      |
 | 系统权限 | DROP ANY OUTLINE            | 删除任意执行计划的权限。      |
+| 系统权限 | SYSKM                       | xx      |
 | 系统权限 | CREATE TABLESPACE           | 创建表空间的权限。         |
 | 系统权限 | ALTER TABLESPACE            | 修改表空间的权限。         |
 | 系统权限 | DROP TABLESPACE             | 删除表空间的权限。         |
@@ -176,6 +190,8 @@ Oracle 模式的权限主要有以下两类：
 | 系统权限 | DROP ANY DIRECTORY          | 删除任意目录的权限。        |
 | 系统权限 | DEBUG CONNECT SESSION       | 调试连接会话的权限。        |
 | 系统权限 | DEBUG ANY PROCEDURE         | 调试任何程序的权限。        |
+| 系统权限 | CREATE ANY CONTEXT          | 创建任何上下文的权限。      |
+| 系统权限 | DROP ANY CONTEXT            | 删除任何上下文的权限。      |
 
 ## 相关文档
 
