--- a/zh-CN/4.deploy/5.deploy-oceanbase-database-community-edition/2.local-deployment/4.deploy-by-ui/1.deploy-by-obd.md
+++ b/zh-CN/4.deploy/5.deploy-oceanbase-database-community-edition/2.local-deployment/4.deploy-by-ui/1.deploy-by-obd.md
@@ -2,53 +2,70 @@
 
 本文以 x86 架构的 CentOS Linux 7.9 镜像作为环境介绍如何使用 OBD 白屏部署 OceanBase 数据库。
 
-## 背景信息
-
-OBD 自 V2.0.0 起支持白屏部署 OceanBase 数据库及相关组件，如 OBAgent、ODP、OCP Express 等，白屏界面配置简单，通过页面的引导配置即可完成单集群部署，适用于需要快速体验，构建标准环境的用户。
-
 ## 前提条件
 
 * 仅部署 OceanBase 数据库，至少需要 2vCPU、8 GB 内存、45 GB 磁盘的可用资源。
 
 * 部署 OceanBase 数据库及全部组件，至少需要 4vCPU、10 GB 内存、50 GB 磁盘的可用资源，推荐内存在 16 GB 以上。
-<!-- 链接待放 -->
-* 部署 OCP Express 组件需先安装配置 Java 环境，目前仅支持 JDK1.8 版本。详细操作可参考 [常见问题]() 中 **部署 OCP Express 前如何配置 Java 环境**。
 
-<main id="notice" type='notice'>
-  <h4>注意</h4>
-  <p>OBD 是通过 SSH 远程执行安装部署，所以您需通过 SSH 验证 Java 环境是否可用，详细操作请参考 <a href="">#java%20%环境验证</a>。</p>
-</main>
+* 部署 OCP Express 组件需先安装配置 Java 环境，目前仅支持 JDK1.8 版本。详细操作可参考 [常见问题](链接待放) 中 **部署 OCP Express 前如何配置 Java 环境**。
 
-## 在线部署
+  <main id="notice" type='notice'>
+    <h4>注意</h4>
+    <p>OBD 是通过 SSH 远程执行安装部署，所以您需通过 SSH 验证 Java 环境是否可用，详细操作请参考 <a href="#java%20%环境验证">Java 环境验证</a>。</p>
+  </main>
 
-当您的机器可以连接公网时，您可参考本节步骤使用 OBD 白屏在线部署 OceanBase 集群。
+## 准备软件
 
-1. 安装 OBD
+使用 OBD 白屏部署 OceanBase 数据库时，可以选择在线部署或离线部署两种部署方式。
 
-   在中控机上执行如下命令安装 OBD。
+* 在线部署：OBD 所在机器需保证能访问外部网络，无需提前配置部署所需安装包，部署过程中 OBD 会从远程镜像仓库获取部署所需安装包。
 
-   ```bash
-   [admin@test001 ~]$ sudo yum install -y yum-utils
-   [admin@test001 ~]$ sudo yum-config-manager --add-repo https://mirrors.aliyun.com/oceanbase/OceanBase.repo
-   [admin@test001 ~]$ sudo yum install -y ob-deploy
-   [admin@test001 ~]$ source /etc/profile.d/obd.sh
-   ```
+* 离线部署：部署过程中无需访问外部网络，您需提前将部署所需安装包上传至 OBD 本地镜像库。选择离线部署时推荐直接下载所需版本的 all-in-one 安装包。
 
-2. 启动白屏界面
+根据不同的部署方式有不同的准备软件方法，您可根据实际情况选择合适的方法准备软件。
+
+### 在线部署
+
+当您选择在线部署时，可以参考本节命令在中控机上安装 OBD。
+
+```bash
+[admin@test001 ~]$ sudo yum install -y yum-utils
+[admin@test001 ~]$ sudo yum-config-manager --add-repo https://mirrors.aliyun.com/oceanbase/OceanBase.repo
+[admin@test001 ~]$ sudo yum install -y ob-deploy
+[admin@test001 ~]$ source /etc/profile.d/obd.sh
+```
+
+### 离线部署
+
+当您选择离线部署时，可参考本节命令下载并安装 all-in-one 安装包。
+
+您可从 [OceanBase 软件下载中心](https://www.oceanbase.com/softwarecenter) 下载最新的 all-in-one 安装包，并将其复制到中控机中。执行如下命令解压并安装：
+
+```bash
+[admin@test001 ~]$ tar -xzf oceanbase-all-in-one-*.tar.gz
+[admin@test001 ~]$ cd oceanbase-all-in-one/bin/
+[admin@test001 bin]$ ./install.sh
+[admin@test001 bin]$ source ~/.oceanbase-all-in-one/bin/env.sh
+```
+
+## 操作步骤
+
+1. 启动白屏界面
 
    命令行执行 `obd web` 命令启动白屏界面，单击输出的地址访问白屏界面，在白屏界面中单击 **开启体验之旅** 即可进入到 OceanBase 数据库的配置界面。
 
    ```bash
    [admin@test001 ~]$ obd web
    start OBD WEB in 0.0.0.0:8680
-   please open http://xxx.xxx.xxx.xxx:8680
+   please open http://10.10.10.1:8680
    ```
 
    <main id="notice" type='explain'>
      <h4>说明</h4>
      <ul>
      <li>
-     <p>白屏界面默认使用 8680 端口，您可使用 <code>obd web -p <PORT></code> 命令指定端口。</p>
+     <p>白屏界面默认使用 8680 端口，您可使用 <code>obd web -p &lt;PORT&gt;</code> 命令指定端口。</p>
      </li>
      <li>
      <p>在阿里云或其他云环境下，可能出现程序无法获取公网 IP，从而输出内网地址的情况，此 IP 非公网地址，您需要使用正确的地址访问白屏界面。</p>
@@ -56,7 +73,7 @@ OBD 自 V2.0.0 起支持白屏部署 OceanBase 数据库及相关组件，如 OB
      </ul>
    </main>
 
-3. 部署配置
+2. 部署配置
 
    **部署配置** 界面可以配置集群名称，部署类型和部署组件。
 
@@ -74,7 +91,7 @@ OBD 自 V2.0.0 起支持白屏部署 OceanBase 数据库及相关组件，如 OB
 
    配置完成之后单击 **下一步** 可进入到 **节点配置** 页面。
 
-4. 节点配置
+3. 节点配置
 
    **节点配置** 界面可以配置数据库和组件节点，部署用户以及软件安装路径。
 
@@ -92,7 +109,7 @@ OBD 自 V2.0.0 起支持白屏部署 OceanBase 数据库及相关组件，如 OB
 
    配置完成之后单击 **下一步** 可进入到 **集群配置** 页面。
 
-5. 集群配置
+4. 集群配置
 
    **集群配置** 界面可对集群进行配置，包括系统租户的管理员用户（root@sys）密码、数据和日志目录、数据库及各组件的端口和参数配置等。
 
@@ -112,7 +129,7 @@ OBD 自 V2.0.0 起支持白屏部署 OceanBase 数据库及相关组件，如 OB
 
    全部配置完成后，单击 **下一步** 即可进入到 **预检查** 页面。
 
-6. 预检查
+5. 预检查
 
    在 **预检查** 页面查看所有配置信息，若发现问题可单击 **上一步** 进行修改；确认无误后，单击 **预检查** 进行检查。
 
@@ -120,7 +137,7 @@ OBD 自 V2.0.0 起支持白屏部署 OceanBase 数据库及相关组件，如 OB
 
    ![预检查](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/obd/V2.0.0/zh-CN/2.quick-start/3.use-ui-deploy-oceanbase-04.png)
 
-7. 部署
+6. 部署
 
    预检查通过后，单击 **部署** 即可开始 OceanBase 数据库的部署。
 
@@ -139,75 +156,20 @@ OBD 自 V2.0.0 起支持白屏部署 OceanBase 数据库及相关组件，如 OB
 
    * 将鼠标悬停在 **查看日志** 按钮后单击 **复制信息**，在命令行中粘贴该信息后执行可查看对应组件的日志位置。
   
-8. 单击 **完成** 退出部署程序
-
-## 离线部署
-
-当您的机器无法连接公网时，您可参考本节步骤通过下载 all-in-one 安装包离线部署 OceanBase 集群。
-
-1. 下载并安装 all-in-one 安装包
-
-   您可从 [OceanBase 软件下载中心](https://www.oceanbase.com/softwarecenter) 下载最新的 all-in-one 安装包，并将其复制到需安装 OBD 的机器中。执行如下命令解压并安装：
-
-   ```bash
-   [admin@test001 ~]$ tar -xzf oceanbase-all-in-one-*.tar.gz
-   [admin@test001 ~]$ cd oceanbase-all-in-one/bin/
-   [admin@test001 bin]$ ./install.sh
-   [admin@test001 bin]$ source ~/.oceanbase-all-in-one/bin/env.sh
-   ```
-
-2. 启动白屏界面
-
-   命令行执行 `obd web` 命令启动白屏界面，单击输出的地址访问白屏界面，在白屏界面中单击 **开启体验之旅** 即可进入到 OceanBase 数据库的配置界面。
-
-   ```bash
-   [admin@test001 ~]$ obd web
-   start OBD WEB in 0.0.0.0:8680
-   please open http://172.xx.xxx.233:8680
-   ```
-
-   <main id="notice" type='explain'>
-     <h4>说明</h4>
-     <ul>
-     <li>
-     <p>白屏界面默认使用 8680 端口，您可使用 <code>obd web -p <PORT></code> 命令指定端口。</p>
-     </li>
-     <li>
-     <p>在阿里云或其他云环境下，可能出现程序无法获取公网 IP，从而输出内网地址的情况，此 IP 非公网地址，您需要使用正确的地址访问白屏界面。</p>
-     </li>
-     </ul>
-   </main>
-
-3. 部署配置
-
-   **部署配置** 界面可以配置集群名称，部署类型和部署组件。
-
-   ![部署配置](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/obd/V2.0.0/zh-CN/2.quick-start/3.use-ui-deploy-oceanbase-06.png)
-
-   其中：
-
-   * **集群名称** 默认为 `myoceanbase`，支持自定义，不可和已有部署名重复。
-
-   * **部署类型** 分为 **完全部署** 和 **精简部署**，**完全部署** 将部署所有组件，而 **精简部署** 只部署 OceanBase 数据库。
-
-   * 单击对应组件后的 **了解更多** 可跳转查看对应组件的文档介绍。
-
-   * 部署所需组件时，您可单击 **版本** 下的下拉框自行选择 OceanBase 数据库的版本，其他组件版本固定为最新版本。
-
-   配置完成之后单击 **下一步** 可进入到 **节点配置** 页面。
-
-   <main id="notice" type='explain'>
-     <h4>说明</h4>
-     <p>部署页面会检测当前 OBD 是否开启在线镜像仓库，离线部署情况下无需开启在线镜像仓库。</p>
-   </main>
-
-4. 离线部署后续步骤和在线部署一致，具体操作请参考 [在线部署](#在线部署) 第 4~8 步。
+7. 单击 **完成** 退出部署程序
 
 ## 相关操作
 
 ### Java 环境验证
 
-由于 OBD 是通过远程执行脚本部署 OCP Express，所以需要通过 SSH 方式验证 Java 环境。您可在任意一台网络与 OCP Express 所在节点连通的机器上执行如下命令进行验证。
+由于 OBD 是通过远程执行脚本部署 OCP Express，所以需要通过 SSH 方式验证 Java 环境，直接在机器上执行 `java -verison` 可能无效。
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>使用终端交互会自动初始化环境变量，SSH 方式访问不会初始化环境变量，会导致使用 SSH 执行命令时出现 Java 命令不存在或使用错误 Java 版本的情况。</p>
+</main>
+
+您可在任意一台网络与 OCP Express 所在节点连通的机器上执行如下命令进行验证。
 
 ```bash
 # ocp_express_node_username：ocp_express 所在节点的用户名
@@ -220,22 +182,25 @@ OpenJDK Runtime Environment (build 1.8.0_362-b08)
 OpenJDK 64-Bit Server VM (build 25.362-b08, mixed mode)
 ```
 
-<main id="notice" type='explain'>
-  <h4>说明</h4>
-  <p>直接在机器上执行 <code>java -verison</code> 可能无效，因为使用交互模式访问时会自动加载用户配置，使用命令行模式时不会加载此类配置，会导致使用 SSH 执行命令时 Java 命令不存在或使用错误 Java 版本的情况出现。</p>
-</main>
+如您已安装符合条件的 Java 但是验证却没有通过，可以通过以下任一方法解决：
 
-如您已安装符合条件的 Java 但是验证却没有通过，可以通过以下任一方式解决：
-
-* 通过组件页面 **更多配置** 配置 **java_bin** 路径
+* 方法一：通过组件页面 **更多配置** 配置 **java_bin** 路径
+  
+  如下图，在配置项 `java_bin` 中配置 Java 的真实路径，如 `/jdk8/bin/java`。
   
   ![更多配置](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/obd/V2.0.0/zh-CN/2.quick-start/3.use-ui-deploy-oceanbase-07.png)
 
-* 将 Java 环境软链接到 `/usr/bin/java` 中
+* 方法二：将 Java 可执行文件软链接到 `/usr/bin/java` 中
+  
+  ```bash
+  [admin@test001 bin]$ pwd
+  /jdk8/bin
+  [admin@test001 bin]$ ln -s /jdk8/bin/java  /usr/bin/java
+  ```
 
 ### 管理部署后的集群
-<!-- 链接待放 -->
-您可执行如下命令对 OBD 部署的集群进行管理。更多操作详见 [集群命令组]()。
+
+您可执行如下命令对 OBD 部署的集群进行管理。更多操作详见 [集群命令组](https://www.oceanbase.com/docs/community-obd-cn-10000000001031933)。
 
 ```bash
 # 查看集群列表
