MySOL Mode PL Compatibility

--- a/zh-CN/1.learn-more-about-oceanbase/5.compatibility-with-mysql.md
+++ b/zh-CN/1.learn-more-about-oceanbase/5.compatibility-with-mysql.md
@@ -8,6 +8,8 @@ OceanBase 数据库的 MySQL 模式兼容 MySQL 5.7/8.0 的绝大部分功能和
 
 * SQL 语法
 
+* 过程性语言
+
 * 系统视图
 
 * 字符集和字符序
@@ -114,6 +116,18 @@ OceanBase 数据库支持的数据类型有：
 * 支持完全清空指定表。
 
 * 不支持在进行事务处理和表锁定的过程中操作。
+
+## 过程性语言
+
+OceanBase 数据库兼容了大部分 MySQL 数据库的 PL 功能，主要支持的 PL 功能如下：
+
+* 数据类型
+* 存储过程
+* 自定义函数
+* 触发器
+* 异常处理
+
+此外，OceanBase 数据库特有的 MySQL PL 系统包，包括 `DBMS_RESOURCE_MANAGER`、`DBMS_STATS`、`DBMS_UDR` 和 `DBMS_XPLAN` 等。
 
 ## 系统视图
 
