--- a/zh-CN/7.reference/2.administrator-guide/2.basic-database-management/4.manage-tenants/5.manage-users-and-permissions/1.users-and-permissions/1.users-and-their-permissions.md
+++ b/zh-CN/7.reference/2.administrator-guide/2.basic-database-management/4.manage-tenants/5.manage-users-and-permissions/1.users-and-permissions/1.users-and-their-permissions.md
@@ -48,7 +48,7 @@ MySQL 模式的权限主要有以下三类：
 | 数据库级权限                 | CREATE                 | 确定用户是否可以创建数据库和表。  |
 | 数据库级权限                 | DROP                   | 确定用户是否可以删除现有数据库、表和视图。|
 | 数据库级权限                 | GRANT                  | 确定用户是否可以授予其他用户权限。  |
-| 数据库级权限                 | REFERENCE              | 确定用户是否可以参考数据库或表。 |
+| 数据库级权限                 | REFERENCE              | 确定用户是否可以创建外键。 |
 | 数据库级权限                 | INDEX                  | 确定用户是否可以创建和删除表索引。|
 | 数据库级权限                 | ALTER                  | 确定用户是否可以修改数据库和表结构。 |
 | 数据库级权限                 | CREATE_TMP_TABLE       | 确定用户是否可以创建临时表。  |
@@ -73,7 +73,7 @@ MySQL 模式的权限主要有以下三类：
 | 用户级权限 | ALTER                  | 确定用户是否可以修改数据库和表结构。                                                                  |
 | 用户级权限 | SHOW DB                | 确定用户是否可以查看服务器上所有数据库的名字，包括用户拥有足够访问权限的数据库。    |
 | 用户级权限 | SUPER                  | 确定用户是否可以执行某些强大的管理功能，例如通过 `KILL` 命令删除用户进程，使用 `SET GLOBAL` 修改全局 MySQL 变量，执行关于复制和日志的各种命令。 |
-| 用户级权限 | REPLICATION SLAVE      | 确定用户是否可以通过 `SHOW SLAVE STATUS` 命令查看复制状态。  |
+| 用户级权限 | REPLICATION SLAVE      | 确定用户是否可以查看复制状态。  |
 | 用户级权限 | REPLICATION CLIENT     | 确定用户是否可以复制用户。 |
 | 用户级权限 | CREATE VIEW            | 确定用户是否可以创建视图。                                                                       |
 | 用户级权限 | SHOW VIEW              | 确定用户是否可以查看视图或了解视图如何执行。                                                              |
@@ -170,12 +170,12 @@ Oracle 模式的权限主要有以下两类：
 | 系统权限 | ALTER ANY TYPE              | 修改任意类型的权限。        |
 | 系统权限 | DROP ANY TYPE               | 删除任意类型的权限。        |
 | 系统权限 | EXECUTE ANY TYPE            | 执行任意类型的权限。        |
-| 系统权限 | UNDER ANY TYPE              | 访问任意类型的权限。        |
+| 系统权限 | UNDER ANY TYPE              | 在任意类型下创建子类型的权限。   |
 | 系统权限 | PURGE DBA_RECYCLEBIN        | 清除回收站的权限。         |
 | 系统权限 | CREATE ANY OUTLINE          | 创建任意执行计划的权限。      |
 | 系统权限 | ALTER ANY OUTLINE           | 修改任意执行计划的权限。      |
 | 系统权限 | DROP ANY OUTLINE            | 删除任意执行计划的权限。      |
-| 系统权限 | SYSKM                       | xx      |
+| 系统权限 | SYSKM                       | 管理主密钥的权限。      |
 | 系统权限 | CREATE TABLESPACE           | 创建表空间的权限。         |
 | 系统权限 | ALTER TABLESPACE            | 修改表空间的权限。         |
 | 系统权限 | DROP TABLESPACE             | 删除表空间的权限。         |
