--- a/zh-CN/4.deploy/5.deploy-oceanbase-database-community-edition/2.local-deployment/3.deploy-by-command/1.deploy-OceanBase-database-of-multi-node-cluster.md
+++ b/zh-CN/4.deploy/5.deploy-oceanbase-database-community-edition/2.local-deployment/3.deploy-by-command/1.deploy-OceanBase-database-of-multi-node-cluster.md
@@ -12,11 +12,11 @@
   
 * OBD
 
-  OceanBase Deployer，OceanBase 开源软件的安装部署工具，简称为 OBD。详细信息请参考 [OBD 文档](链接待放)。
+  OceanBase Deployer，OceanBase 开源软件的安装部署工具，简称为 OBD。详细信息请参考 [OBD 文档](https://www.oceanbase.com/docs/community-obd-cn-10000000001031920)。
   
 * OBProxy
 
-  OceanBase Database Proxy，OceanBase 高性能反向代理服务器，简称为 OBProxy。详细信息请参考 [ODP 文档](链接待放)
+  OceanBase Database Proxy，OceanBase 高性能反向代理服务器，简称为 OBProxy。详细信息请参考 [ODP 文档](https://www.oceanbase.com/docs/enterprise-odp-enterprise-cn-10000000000982768)
 
 * OCP Express
   
@@ -30,7 +30,7 @@
 
 * 生产环境下，您需要进行环境和配置检查，具体操作请参考 [部署前配置](../2.environment-and-configuration-checks.md)。
 
-* 中控机器中已安装 OBD，建议安装最新版本，详细信息请参考 [安装 OBD](链接待放)。
+* 中控机器中已安装 OBD，建议安装最新版本，详细信息请参考 [安装 OBD](https://www.oceanbase.com/docs/community-obd-cn-10000000001031921)。
 
 * 您的机器中已安装 OBClient 客户端，详细信息请参考 [OBClient 文档](https://github.com/oceanbase/obclient/blob/master/README.md)。
 
