--- a/zh-CN/4.deploy/5.deploy-oceanbase-database-community-edition/2.local-deployment/3.deploy-by-command/2.stand-alone-deployment-by-obd.md
+++ b/zh-CN/4.deploy/5.deploy-oceanbase-database-community-edition/2.local-deployment/3.deploy-by-command/2.stand-alone-deployment-by-obd.md
@@ -10,7 +10,7 @@ OceanBase 数据库支持单机部署。单机部署仅包含一个 Zone 并且 
 
 * 生产环境下，您需要进行环境和配置检查，具体操作请参考 [部署前配置](../2.environment-and-configuration-checks.md)。
 
-* 您的机器中已安装 OBD，建议安装最新版本，详细信息请参考 [安装 OBD](链接待OBD发布后放)。
+* 您的机器中已安装 OBD，建议安装最新版本，详细信息请参考 [安装 OBD](https://www.oceanbase.com/docs/community-obd-cn-10000000001031921)。
 
 * 您的机器中已安装 OBClient 客户端，详细信息请参考 [OBClient 文档](https://github.com/oceanbase/obclient/blob/master/README.md)。
 
