obdumper具有导出ddl能力不算结构迁移支持吗
obdumper具有导出ddl能力，这个不算结构迁移支持吗？

--- a/zh-CN/5.data-migration/1.data-migration-overview.md
+++ b/zh-CN/5.data-migration/1.data-migration-overview.md
@@ -25,7 +25,7 @@ OceanBase 数据库提供丰富的数据迁移复制方法，包括：
 |迁移方案|结构迁移|全量数据迁移|增量数据迁移|数据校验|支持的数据源|
 |---------|---------|-----------|------------|---------|-------|
 |OMS|支持|支持|支持|支持|MySQL<br>PostgreSQL<br>Oracle<br>DB2<br>TiDB<br>OceanBase<br>Kafka<br>RocketMQ<br>Datahub<br>ADB|
-|OBLOADER & OBDUMPER|	不支持|	支持|不支持|不支持|	OceanBase|
+|OBLOADER & OBDUMPER|	支持|	支持|不支持|不支持|	OceanBase|
 |SQL 脚本迁移|	支持	|支持|	不支持	|不支持	|主流数据库，但无法跨实例做数据迁移|
 |MyDumper|	支持	|支持|	不支持|	不支持	|MySQL 兼容的数据源|
 |DataX|不支持|支持|不支持|不支持|较多，具体范围查看官方文档|
