--- a/zh-CN/7.reference/3.system-views/2.dictionary-view-5/1.dictionary-view-overview-1.md
+++ b/zh-CN/7.reference/3.system-views/2.dictionary-view-5/1.dictionary-view-overview-1.md
@@ -239,6 +239,12 @@
 | [oceanbase.DBA_OB_UNIT_CONFIGS](60.oceanbase-dba_ob_unit_configs.md)   | 展示所有租户的 UNIT 规格信息。 |
 | [oceanbase.DBA_OB_SEQUENCE_OBJECTS](68.oceanbase-dba_ob_sequence_objects.md)   | 展示数据库中所有 SEQUENCE。 |
 
+## 序列
+
+|                                      视图名                                       |        功能描述        |
+|--------------------------------------------------------------------------------|--------------------|
+| [oceanbase.DBA_OB_SEQUENCE_OBJECTS](68.oceanbase-dba_ob_sequence_objects.md)   | 展示数据库中所有 SEQUENCE。 |
+
 ## 副本和日志相关
 
 |                                           视图名                                            |                                             功能描述                                             |
