--- a/zh-CN/6.manage/4.high-availability/3.physical-standby-database-disaster-recovery/1.physical-standby-database-overview.md
+++ b/zh-CN/6.manage/4.high-availability/3.physical-standby-database-disaster-recovery/1.physical-standby-database-overview.md
@@ -1,17 +1,21 @@
-# 主备库概述
+# 物理备库概述
 
-OceanBase 数据库 V4.1.0 版本之前，主备库的产品形态为集群级主备库，集群有两种角色：主集群和备集群，主集群下面所有用户租户都是主租户，备集群下面所有用户租户都是备租户，备集群会自动同步主集群的租户变更操作。从 V4.1.0 版本开始，主备库的产品形态变更为租户级主备库。
+OceanBase 数据库 V4.1.0 版本之前，主备库的产品形态为集群级主备库，集群有两种角色：主集群和备集群，主集群下面所有用户租户都是主租户，备集群下面所有用户租户都是备租户，备集群会自动同步主集群的租户变更操作。从 V4.1.0 版本开始，主备库的产品形态变更为租户级物理备库。
 
-租户级主备库的特点如下：
+物理备库是 OceanBase 数据库高可用解决方案的重要组成部分，当主库出现计划内或计划外（多数派副本故障）的不可用情况时，备库可以接管服务，并且提供无损切换（RPO = 0）和有损切换（RPO > 0）两种容灾能力，最大限度降低服务停机时间。
+
+通过物理备库功能，用户可以为一个主租户创建一个到多个备租户，可以将资源密集型的报表操作分配到备集群，以便提高系统的性能和资源利用率。
+
+物理备库的特点如下：
 
 * OceanBase 集群级不再有主备角色，主备角色下放到租户级。OceanBase 集群作为承载租户的容器，既可以包含主租户、也可以包含备租户，并且主备租户可以同时存在于一个 OceanBase 集群内。
 
-* 具有主备关系的主备租户，互相不感知对方的存在，也不会记录对方的信息，主备租户之间仅通过日志归档来同步日志。因此，在进行主备库管理时，需要您记录好租户的主备对应关系。
+* 具有主备关系的主备租户，互相不感知对方的存在，也不会记录对方的信息，主备租户之间仅通过日志归档来同步日志。因此，在进行物理备库的管理时，需要您记录好租户的主备对应关系。
 
 * 主备租户的租户名称可以相同，也可以不同。
 
-* 租户级主备库仅支持一种保护模式，即最大性能模式，不再支持最大保护、最大可用模式。
+* 物理备库仅支持一种保护模式，即最大性能模式，不再支持最大保护、最大可用模式。
 
-独立租户级主备库的部署架构如下图所示。
+物理备库的部署架构如下图所示。
 
-![租户级主备库部署架构图](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/observer-enterprise/V4.1.0/user-guide/active-and-standby-tenant/active-and-standby-tenant-deployment-architecture.png)
+![物理备库部署架构图](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/observer-enterprise/V4.1.0/user-guide/active-and-standby-tenant/active-and-standby-tenant-deployment-architecture.png)
