--- a/zh-CN/6.manage/4.high-availability/3.physical-standby-database-disaster-recovery/8.delete-a-primary-or-standby-tenant.md
+++ b/zh-CN/6.manage/4.high-availability/3.physical-standby-database-disaster-recovery/8.delete-a-primary-or-standby-tenant.md
@@ -1,6 +1,6 @@
 # 删除主备租户
 
-由于当前版本的主备库为独立租户级主备库，备租户是通过 `RESTORE` 命令显式创建而来，故在删除租户时，主备租户都需要显示删除。
+由于当前版本为独立租户级物理备库，备租户是通过 `RESTORE` 命令显式创建而来，故在删除租户时，主备租户都需要显示删除。
 
 ## 注意事项
 
