--- a/zh-CN/7.reference/2.administrator-guide/2.basic-database-management/8.management-process/4.oceanbase-database-background-threads.md
+++ b/zh-CN/7.reference/2.administrator-guide/2.basic-database-management/8.management-process/4.oceanbase-database-background-threads.md
@@ -58,7 +58,7 @@
 | ObRestoreScheduler             | RS       | 1    | 负责恢复流程的调度。       |
 | ObWorkQueue      | RS       | 4    | 执行 RS 的异步任务，线程数通过配置项 `rootservice_async_task_thread_count` 来控制，取值范围为 \[1,10\]。         |
 | ObAsyncTaskQueue               | RS       | 16   | 执行构建索引的任务。       |
-| ObSwitchTaskQueue              | RS       | 6    | 主备库切换的任务队列，线程数通过配置项 `switchover_process_thread_count` 来控制，取值范围为 \[1, 1000\]。           |
+| ObSwitchTaskQueue              | RS       | 6    | 物理备库中主备切换的任务队列，线程数通过配置项 `switchover_process_thread_count` 来控制，取值范围为 \[1, 1000\]。           |
 | LocalityReload                 | RS       | 1    | 定期刷新 Locality 信息。              |
 | RSqlPool         | RS       | 1    | 备库用来定期维护主库的 Root Server 列表。     |
 | ServerTracerTimer              | RS       | 1    | 用来维护和其他 Server 状态的定时任务。        |
