--- a/zh-CN/7.reference/2.administrator-guide/3.database-object-management/1.manage-object-of-mysql-mode/4.manage-indexes-of-mysql-mode/2.create-an-index-of-mysql-mode.md
+++ b/zh-CN/7.reference/2.administrator-guide/3.database-object-management/1.manage-object-of-mysql-mode/4.manage-indexes-of-mysql-mode/2.create-an-index-of-mysql-mode.md
@@ -146,9 +146,9 @@ OceanBase 数据库的 MySQL 模式支持创建空间索引。空间索引是对
 
 * 创建空间索引的列必须定义为 `SRID` 属性，否则，在该列上添加的空间索引在后续查询时会无法生效。这是因为，创建空间索引后，在使用空间索引进行比较时，需要使用列定义中的 `SRID` 所对应的坐标系。空间索引存储了几何对象的 MBR（Minimum Bounding Rectangle）构建，而 MBR 的比较方式也依赖于 `SRID`。
 
-  关于 SRID 相关的介绍，请参见 [空间参考系统（SRS）](链接暂时无法添加)。
+  关于 SRID 相关的介绍，请参见 [空间参考系统（SRS）](../../../../4.development-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/1.basic-elements-of-mysql-mode/1.data-type-of-mysql-mode/9.spatial-data-type-of-mysql-mode/2.spacial-reference-system-of-mysql-mode.md)。
 
-* 只能对空间数据类型的数据列创建空间索引。OceanBase 数据库支持的空间数据类型请参见 [空间数据类型概述](sql语法中暂未添加)。
+* 只能对空间数据类型的数据列创建空间索引。OceanBase 数据库支持的空间数据类型请参见 [空间数据类型概述](../../../../4.development-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/1.basic-elements-of-mysql-mode/1.data-type-of-mysql-mode/9.spatial-data-type-of-mysql-mode/1.spatial-data-type-overview-of-mysql-mode.md)。
 
 * 创建空间索引的列的列属性必须为 `NOT NULL`。
 
@@ -170,7 +170,7 @@ obclient> CREATE TABLE table_name(column_g_name GEOMETRY NOT NULL SRID 4326,[col
 
 * `SRID 4326`：显示指定空间列的 `SRID`。
 
-* `data_type`：指定表中各列对应的数据类型。待添加空间索引的列的列类型必须为空间数据类型。OceanBase 数据库支持的空间数据类型请参见 [空间数据类型概述](sql语法中暂未添加)。
+* `data_type`：指定表中各列对应的数据类型。待添加空间索引的列的列类型必须为空间数据类型。OceanBase 数据库支持的空间数据类型请参见 [空间数据类型概述](../../../../4.development-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/1.basic-elements-of-mysql-mode/1.data-type-of-mysql-mode/9.spatial-data-type-of-mysql-mode/1.spatial-data-type-overview-of-mysql-mode.md)。
 
 * `index_name`：指定待添加的索引的索引名。
 
