--- a/zh-CN/7.reference/2.administrator-guide/7.management/4.performance-diagnosis/5.ash-report-diagnosis/3.analyze-ash-report.md
+++ b/zh-CN/7.reference/2.administrator-guide/7.management/4.performance-diagnosis/5.ash-report-diagnosis/3.analyze-ash-report.md
@@ -178,7 +178,7 @@ SQL Text: insert /*+ enable_parallel_dml parrallel(10) */ into t1 select normal(
 | latch: clog reconfirm lock wait | clog 模块 Reconfirm 类使用的锁 | CONCURRENCY | address | number | tries |
 | latch: clog stat mgr lock wait | clog 模块状态切换的锁 | CONCURRENCY | address | number | tries |
 | latch: clog sw renew ms task lock wait | clog 备库更新成员组信息的锁等待 | CONCURRENCY | address | number | tries |
-| latch: clog switch info lock wait | clog 模块保护主备库切换信息的锁 | CONCURRENCY | address | number | tries |
+| latch: clog switch info lock wait | clog 模块保护物理备库中主备租户切换信息的锁 | CONCURRENCY | address | number | tries |
 | latch: clog task lock wait | clog 模块 log_task 的锁 | CONCURRENCY | address | number | tries |
 | latch: config lock wait | 配置项锁等待事件 | CONCURRENCY | address | number | tries |
 | latch: default drw lock wait | DRWLock 等待事件，DRWLock 是一个适应读多写少场景的读写锁 | CONCURRENCY | address | number | tries |
