--- a/zh-CN/7.reference/2.administrator-guide/3.database-object-management/2.manage-object-of-oracle-mode/9.manage-dblink-of-oracle-mode/4.update-data-in-remote-database-by-a-dblink-of-oracle-mode.md
+++ b/zh-CN/7.reference/2.administrator-guide/3.database-object-management/2.manage-object-of-oracle-mode/9.manage-dblink-of-oracle-mode/4.update-data-in-remote-database-by-a-dblink-of-oracle-mode.md
@@ -78,7 +78,7 @@ obclient> SELECT * FROM t1@ob_dblink;
 2 rows in set
 ```
 
-通过 DBLink 向远端数据库的表中插入数据的操作与直接向表中插入数据的操作类似，只需要在语句中待操作的表名后添加 `@dblink_name` 后缀即可，有关向表中插入数据的详细操作，可参见 [插入数据](链接暂时无法添加)。
+通过 DBLink 向远端数据库的表中插入数据的操作与直接向表中插入数据的操作类似，只需要在语句中待操作的表名后添加 `@dblink_name` 后缀即可，有关向表中插入数据的详细操作，可参见 [插入数据](../../../../../3.develop/2.application-development-of-oracle-mode/3.write-data-of-oracle-mode/1.insert-data-of-oracle-mode.md)。
 
 更多 `INSERT` 语句的详细使用及说明，请参见 [INSERT](../../../../6.sql-syntax/3.common-tenant-oracle-mode/9.sql-statement-1/2.DML/2.INSERT-1.md)。
 
@@ -126,7 +126,7 @@ obclient> SELECT * FROM t2@ob_dblink;
 1 rows in set
 ```
 
-通过 DBLink 更新远端数据库中表数据的操作与直接更新表数据的操作类似，只需要在语句中待操作的表名后添加 `@dblink_name` 后缀即可，有关更新表数据的详细操作，可参见 [更新数据](链接暂时无法添加)。
+通过 DBLink 更新远端数据库中表数据的操作与直接更新表数据的操作类似，只需要在语句中待操作的表名后添加 `@dblink_name` 后缀即可，有关更新表数据的详细操作，可参见 [更新数据](../../../../../3.develop/2.application-development-of-oracle-mode/3.write-data-of-oracle-mode/2.update-data-of-oracle-mode.md)。
 
 更多 `UPDATE` 语句的详细使用及说明，请参见 [UPDATE](../../../../6.sql-syntax/3.common-tenant-oracle-mode/9.sql-statement-1/2.DML/6.UPDATE-1.md)。
 
@@ -202,7 +202,7 @@ obclient> SELECT * FROM t3@orcl_dblink;
 4 row in set
 ```
 
-通过 DBLink 替换远端数据库中表数据的操作与直接替换数据的操作类似，只需要在语句中待操作的表名后添加 `@dblink_name` 后缀即可，有关替换表数据的详细操作，可参见 [替换数据](链接暂时无法添加)。
+通过 DBLink 替换远端数据库中表数据的操作与直接替换数据的操作类似，只需要在语句中待操作的表名后添加 `@dblink_name` 后缀即可，有关替换表数据的详细操作，可参见 [替换数据](../../../../../3.develop/2.application-development-of-oracle-mode/3.write-data-of-oracle-mode/4.replace-data-of-oracle-mode.md)。
 
 更多 `MERGE INTO` 语句的详细使用及说明，请参见 [MERGE](../../../../6.sql-syntax/3.common-tenant-oracle-mode/9.sql-statement-1/2.DML/3.MERGE.md)。
 
@@ -247,7 +247,7 @@ obclient> SELECT * FROM t5@orcl_dblink;
 1 row in set
 ```
 
-通过 DBLink 删除远端数据库的表数据的操作与直接删除表数据的操作类似，只需要在语句中待操作的表名后添加 `@dblink_name` 后缀即可，有关删除表数据的详细操作，可参见 [删除数据](链接暂时无法添加)。
+通过 DBLink 删除远端数据库的表数据的操作与直接删除表数据的操作类似，只需要在语句中待操作的表名后添加 `@dblink_name` 后缀即可，有关删除表数据的详细操作，可参见 [删除数据](../../../../../3.develop/2.application-development-of-oracle-mode/3.write-data-of-oracle-mode/3.delete-data-of-oracle-mode.md)。
 
 更多 `DELETE` 语句的详细使用及说明，请参见 [DELETE](../../../../6.sql-syntax/3.common-tenant-oracle-mode/9.sql-statement-1/2.DML/1.DELETE-1.md)。
 
