V410 同步低错问题

--- a/zh-CN/2.quickstart/3.create-sample-application-of-mysql-mode/3.c-application-of-mysql-model.md
+++ b/zh-CN/2.quickstart/3.create-sample-application-of-mysql-mode/3.c-application-of-mysql-model.md
@@ -310,11 +310,12 @@ export LD_LIBRARY_PATH=/u01/obclient/lib
 ./mysql_test
 
 #输出如下结果，说明数据库连接成功，示例语句正确执行。
-0 rows affected
-0 rows affected
-1 rows affected
-1 rows affected
-0 rows affected
+---------------------
+id      name
+---------------------
+20      hangzhou
+20      shanghai
+---------------------
 ```
 
 ## 更多信息
