--- a/zh-CN/6.manage/4.high-availability/3.physical-standby-database-disaster-recovery/8.delete-a-primary-or-standby-tenant.md
+++ b/zh-CN/6.manage/4.high-availability/3.physical-standby-database-disaster-recovery/8.delete-a-primary-or-standby-tenant.md
@@ -38,10 +38,10 @@
      DROP TENANT tenant_name FORCE;
      ```
 
-更多删除租户的详细操作及说明，请参见 [删除租户](../../2.basic-database-management/4.manage-tenants/4.manage-tenants/5.delete-a-tenant.md)。
+更多删除租户的详细操作及说明，请参见 [删除租户](../../2.tenant-management/6.common-tenant-operations/12.delete-tenant.md)。
 
 ## 相关文档
 
-* [删除租户](../../2.basic-database-management/4.manage-tenants/4.manage-tenants/5.delete-a-tenant.md)
+* [删除租户](../../2.tenant-management/6.common-tenant-operations/12.delete-tenant.md)
 
-* [开启或关闭回收站](../1.flashback/3.tenant-recycle.md)
+* [开启或关闭回收站](../5.recyclebin-management/2.turn-the-recyclebin-on-or-off.md)
