--- a/zh-CN/6.manage/4.high-availability/3.physical-standby-database-disaster-recovery/2.create-a-standby-tenant.md
+++ b/zh-CN/6.manage/4.high-availability/3.physical-standby-database-disaster-recovery/2.create-a-standby-tenant.md
@@ -10,7 +10,7 @@
 
   1. 主租户已开启归档模式，且日志归档状态一直为 `DOING`。
 
-     开启归档模式的相关操作，请参见 [开启归档模式](../2.backup-and-restoration-management/3.log-archive/3.initiate-log-archive.md)。查看日志归档状态的相关操作，请参见 [查看归档进度](../2.backup-and-restoration-management/3.log-archive/6.view-log-archive-progress.md)。
+     开启归档模式的相关操作，请参见 [开启归档模式](../../6.backup-and-recovery/3.log-archive/3.open-the-log-archive-mode.md)。查看日志归档状态的相关操作，请参见 [查看归档进度](../../6.backup-and-recovery/3.log-archive/6.view-log-archive-progress.md)。
 
      <main id="notice" type='notice'>
      <h4>注意</h4>
@@ -25,7 +25,7 @@
 
   1. 作为恢复源的备租户必须已开启归档模式，且日志归档状态一直为 `DOING`。
 
-     开启归档模式的相关操作，请参见 [开启归档模式](../2.backup-and-restoration-management/3.log-archive/3.initiate-log-archive.md)。查看日志归档状态的相关操作，请参见 [查看归档进度](../2.backup-and-restoration-management/3.log-archive/6.view-log-archive-progress.md)。
+     开启归档模式的相关操作，请参见 [开启归档模式](../../6.backup-and-recovery/3.log-archive/3.open-the-log-archive-mode.md)。查看日志归档状态的相关操作，请参见 [查看归档进度](../../6.backup-and-recovery/3.log-archive/6.view-log-archive-progress.md)。
 
      <main id="notice" type='notice'>
      <h4>注意</h4>
