--- a/zh-CN/7.reference/5.system-reference/1.system-configuration-items/3.cluster-level-configuration-items/205.syslog_level.md
+++ b/zh-CN/7.reference/5.system-reference/1.system-configuration-items/3.cluster-level-configuration-items/205.syslog_level.md
@@ -1,15 +1,10 @@
-syslog_level 
-=================================
+# syslog_level
 
-`syslog_level` 用于设置系统日志级别。
+`syslog_level`  用于设置系统日志级别。
 
-
-|      **属性**      |                                                                                                                                        **描述**                                                                                                                                        |
-|------------------|--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
-| 参数类型             | 字符串                                                                                                                                                                                                                                                                                  |
-| 默认值              | INFO                                                                                                                                                                                                                                                                                 |
-| 取值范围             | <li> DEBUG   <li> TRACE   <li> INFO   <li> WARN   <li> USER_ERR   <li> ERROR    |
-| 是否重启 observer 进程生效 | 否                                                                                                                                                                                                                                                                                    |
-
-
-
+| **属性** | **描述** |
+| --- | --- |
+| 参数类型 | 字符串 |
+| 默认值 | WDIAG |
+| 取值范围 |<ul><li>  DEBUG </li><li> TRACE</li><li>WDIAG</li><li>EDIAG</li><li>INFO </li><li> WARN</li><li> ERROR</li></ul>|
+| 是否重启 OBSever 节点生效 | 否 |
