--- a/zh-CN/7.reference/5.system-reference/1.system-configuration-items/4.tenant-level-configuration-items/9.enable_early_lock_release.md
+++ b/zh-CN/7.reference/5.system-reference/1.system-configuration-items/4.tenant-level-configuration-items/9.enable_early_lock_release.md
@@ -1,14 +1,10 @@
-enable_early_lock_release 
-==============================================
+# enable_early_lock_release
 
 enable_early_lock_release 用于设置是否开启提前解行锁的功能。
 
-
-|      **属性**      |                                                 **描述**                                                 |
-|------------------|--------------------------------------------------------------------------------------------------------|
-| 参数类型             | 布尔类型                                                                                                   |
-| 默认值              | False                                                                                                  |
-| 取值范围             | <li> True   <li> False    |
-| 是否重启 observer 进程生效 | 否                                                                                                      |
-
-
+| **属性** | **描述** |
+| --- | --- |
+| 参数类型 | 布尔类型 |
+| 默认值 | True |
+| 取值范围 |<ul><li>  True </li><li> False </li></ul>|
+| 是否重启 OBSever 节点生效 | 否 |
