wk_410:update invalid links and some errors

--- a/zh-CN/7.reference/2.administrator-guide/7.management/5.emergency-response/3.common-emergency-response/2.problems-caused-by-capacity-changes/1.exceptions-caused-by-sql-queries.md
+++ b/zh-CN/7.reference/2.administrator-guide/7.management/5.emergency-response/3.common-emergency-response/2.problems-caused-by-capacity-changes/1.exceptions-caused-by-sql-queries.md
@@ -171,13 +171,13 @@ CREATE OUTLINE outline_name ON sql_id USING HINT /*+max_concurrent(1)*/;
       1. 查询 GV$OB_SQL_AUDIT 表，如查询某租户执行时间大于1s (1000000微秒)的 SQL。
 
          ```sql
-         SELECT * FROM GV$OB_SQL_AUDIT WHERE tenant_id= <tenantid> AND elapsed_time> 1000000 limit 10;
+         SELECT * FROM oceanbase.GV$OB_SQL_AUDIT WHERE tenant_id= <tenantid> AND elapsed_time> 1000000 limit 10;
          ```
 
       2. 查询 SQL 执行时间按秒分布的直方图。
 
          ```sql
-         SELECT round(elapsed_time/1000000), count(*) FROM V$OB_SQL_AUDIT WHERE tenant_id = <tenant_id> GROUP BY  1;
+         SELECT round(elapsed_time/1000000), count(*) FROM oceanbase.V$OB_SQL_AUDIT WHERE tenant_id = <tenant_id> GROUP BY  1;
          ```
 
 3. 在 OceanBase 日志中查找慢 SQL。
