--- a/zh-CN/7.reference/2.administrator-guide/7.management/4.performance-diagnosis/1.cluster-performance-diagnosis.md
+++ b/zh-CN/7.reference/2.administrator-guide/7.management/4.performance-diagnosis/1.cluster-performance-diagnosis.md
@@ -14,18 +14,18 @@
 
 4. 打开实时性能开关，可看到性能的实时变化。
 
-![集群性能监控](https://help-static-aliyun-doc.aliyuncs.com/assets/img/zh-CN/1329721461/p347138.png)
+![集群性能监控](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/ocp/401/%E6%95%B0%E6%8D%AE%E5%BA%93%E6%80%A7%E8%83%BD1.png)
 
 监控数据筛选说明如下。
 
 |   筛选对象   |                                           说明                                            |
 |----------|-----------------------------------------------------------------------------------------|
-| 选择时间     | 监控展示的时间范围，支持查看近 30 天数据。                                                                 |
-| 统计周期     | 支持按分钟、秒对采集的监控指标进行平均值统计并展示，默认分钟级别。                                                       |
+|  选择时间（又称：监控窗口） | 自动刷新模式下不展示。 选择某一段时间范围，用于返回这段时间范围内的数据。  |
+|自动刷新  |默认关闭，打开后，每 5s 进行一次刷新。| 
 | Zone     | OceanBase 是分布式数据库，集群监控由多个Zone 采集汇总而成。汇总方式由指标类型决定。选择单个 Zone，展示对应 Zone 的监控数据。             |
 | OBServer | OceanBase 是分布式数据库，集群监控由多个OBServer 采集汇总而成。汇总方式由指标类型决定。选择单个 OBServer，展示对应 OBServer 的监控数据。 |
 
-性能指标分数据库性能和主机性能，更多性能指标详情，请参见 [监控指标](https://www.oceanbase.com/docs/oceanbase-cloud-platform/oceanbase-cloud-platform/V3.1.2/pmt1bh)。
+性能指标分数据库性能和主机性能，更多性能指标详情，请参见 [监控指标](https://www.oceanbase.com/docs/enterprise-oceanbase-ocp-cn-10000000001538863)。
 
 ## 集群性能报告
 
@@ -58,3 +58,6 @@
 | 工作负载 | 集群工作负载信息。                           |
 | SQL  | 按照响应时间、等待事件、CPU 等指标进行汇总的 TopSQL 信息。 |
 | 锁    | 包括行锁请求、等待、超时等信息。                    |
+
+	
+更多关于集群的性能报告信息，请参见 [性能报告](https://www.oceanbase.com/docs/enterprise-oceanbase-ocp-cn-10000000001542084)。
