--- a/zh-CN/7.reference/2.administrator-guide/7.management/5.emergency-response/3.common-emergency-response/3.other-problems-within-the-cluster/1.service-faq-for-sys-tenants-rs.md
+++ b/zh-CN/7.reference/2.administrator-guide/7.management/5.emergency-response/3.common-emergency-response/3.other-problems-within-the-cluster/1.service-faq-for-sys-tenants-rs.md
@@ -17,7 +17,7 @@ OceanBase 中，Root Service 作为负责集群资源管理、分布式策略执
    FROM
    OCEANBASE.DBA_OB_TENANTS a,
    OCEANBASE.DBA_OB_UNIT_CONFIGS b,
-   OCEANBASE.DBA_OB_RESOURCE_POOL c
+   OCEANBASE.DBA_OB_RESOURCE_POOLS c
    WHERE a.tenant_id=c.tenant_id
    AND b.unit_config_id = c.unit_config_id
    ORDER BY a.tenant_id desc;
