--- a/zh-CN/6.manage/4.high-availability/4.arbitration-high-availability/3.disable-the-arbitration-service.md
+++ b/zh-CN/6.manage/4.high-availability/4.arbitration-high-availability/3.disable-the-arbitration-service.md
@@ -101,16 +101,18 @@
 
 ## 后续操作
 
-关闭所有租户的仲裁服务后，如果不需要再使用仲裁服务，可以删除仲裁服务，删除仲裁服务的详细操作参见 [删除仲裁服务](5.remove-the-arbitration-service.md)。
+关闭所有租户的仲裁服务后，如果不需要再使用仲裁服务，可以删除仲裁服务，删除仲裁服务的详细操作参见 [删除仲裁服务](6.remove-the-arbitration-service.md)。
 
 ## 相关文档
 
-更多仲裁服务相关的操作，请参见以下信息：
+更多仲裁服务相关的信息，请参见以下内容：
 
-* [开启仲裁服务](1.enable-the-arbitration-service.md)
+* [仲裁服务概述](1.arbitration-service-overview.md)
 
-* [修改降级超时时间](3.modify-the-degradation-timeout.md)
+* [开启仲裁服务](2.enable-the-arbitration-service.md)
 
-* [替换仲裁服务](4.replace-the-arbitration-service.md)
+* [修改降级超时时间](4.modify-the-degradation-timeout.md)
 
-* [删除仲裁服务](5.remove-the-arbitration-service.md)
+* [替换仲裁服务](5.replace-the-arbitration-service.md)
+
+* [删除仲裁服务](6.remove-the-arbitration-service.md)
