--- a/zh-CN/6.manage/4.high-availability/4.arbitration-high-availability/5.replace-the-arbitration-service.md
+++ b/zh-CN/6.manage/4.high-availability/4.arbitration-high-availability/5.replace-the-arbitration-service.md
@@ -49,12 +49,14 @@
 
 ## 相关文档
 
-更多仲裁服务相关的操作，请参见以下信息：
+更多仲裁服务相关的信息，请参见以下内容：
 
-* [开启仲裁服务](1.enable-the-arbitration-service.md)
+* [仲裁服务概述](1.arbitration-service-overview.md)
 
-* [关闭仲裁服务](2.disable-the-arbitration-service.md)
+* [开启仲裁服务](2.enable-the-arbitration-service.md)
 
-* [修改降级超时时间](3.modify-the-degradation-timeout.md)
+* [关闭仲裁服务](3.disable-the-arbitration-service.md)
 
-* [删除仲裁服务](5.remove-the-arbitration-service.md)
+* [修改降级超时时间](4.modify-the-degradation-timeout.md)
+
+* [删除仲裁服务](6.remove-the-arbitration-service.md)
