feat(link): 中文目录跳转链接处理

--- a/zh-CN/5.data-migration/11.bypass-import/3.use-insert-into-select-statement-to-bypass-import-data.md
+++ b/zh-CN/5.data-migration/11.bypass-import/3.use-insert-into-select-statement-to-bypass-import-data.md
@@ -67,4 +67,4 @@ obclient [test]> EXPLAIN EXTENDED INSERT INTO /*+ append enable_parallel_dml par
 ## 相关文档
 
 * [表与表之间的数据迁移](../10.use-sql-statements-migrate-data/1.data-migration-between-tables.md)
-* [查看执行计划](zh-CN/3.develop/1.application-development-of-mysql-mode/4.read-data-of-mysql-mode/9.execution-plan-of-mysql-mode/1.view-the-execution-plan-of-mysql-mode.md)
+* [查看执行计划](../../3.develop/1.application-development-of-mysql-mode/4.read-data-of-mysql-mode/9.execution-plan-of-mysql-mode/1.view-the-execution-plan-of-mysql-mode.md)
