--- a/zh-CN/6.manage/4.high-availability/3.physical-standby-database-disaster-recovery/6.adjust-the-log-archiving-speed-of-the-primary-tenant.md
+++ b/zh-CN/6.manage/4.high-availability/3.physical-standby-database-disaster-recovery/6.adjust-the-log-archiving-speed-of-the-primary-tenant.md
@@ -2,7 +2,7 @@
 
 日志归档过程中，您需要实时监控主租户的日志归档进度，如果发现主租户的归档位点与当前时间相差较大，则表示主租户的日志归档速度可能存在瓶颈，可以尝试通过修改租户级配置项 `log_archive_concurrency` 来调整主租户日志归档的并发度，进而提高主租户的日志归档速度。
 
-查看主租户日志归档进度的详细操作，请参见 [查看归档进度](../2.backup-and-restoration-management/3.log-archive/7.view-log-archive-history.md)。
+查看主租户日志归档进度的详细操作，请参见 [查看归档进度](../../6.backup-and-recovery/3.log-archive/7.view-log-archive-history.md)。
 
 ## 操作步骤
 
@@ -43,4 +43,4 @@
 
 * [调整备租户的日志同步性能](5.adjust-the-log-synchronization-performance-of-the-standby-tenant.md)
 
-* [查看归档进度](../2.backup-and-restoration-management/3.log-archive/7.view-log-archive-history.md)
+* [查看归档进度](../../6.backup-and-recovery/3.log-archive/7.view-log-archive-history.md)
