--- a/zh-CN/7.reference/2.administrator-guide/3.database-object-management/2.manage-object-of-oracle-mode/1.manage-tables-of-oracle-mode/9.lock-table-of-oracle-mode.md
+++ b/zh-CN/7.reference/2.administrator-guide/3.database-object-management/2.manage-object-of-oracle-mode/1.manage-tables-of-oracle-mode/9.lock-table-of-oracle-mode.md
@@ -85,4 +85,4 @@ OceanBase 数据库当前版本所支持的锁定模式如下：
    </tr>
 </table>
 
-更多 `LOCK TABLES` 语句的介绍，请参见 [LOCK TABLES](../../../../7.reference/4.development-reference/6.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/3.dcl-of-oracle-mode/20.lock-table-of-oracle-mode.md)。
+更多 `LOCK TABLES` 语句的介绍，请参见 [LOCK TABLES](../../../../4.development-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/3.dcl-of-oracle-mode/20.lock-table-of-oracle-mode.md)。
