--- a/zh-CN/7.reference/2.administrator-guide/3.database-object-management/2.manage-object-of-oracle-mode/9.manage-dblink-of-oracle-mode/3.access-a-remote-database-by-a-dblink-of-oracle-mode.md
+++ b/zh-CN/7.reference/2.administrator-guide/3.database-object-management/2.manage-object-of-oracle-mode/9.manage-dblink-of-oracle-mode/3.access-a-remote-database-by-a-dblink-of-oracle-mode.md
@@ -35,7 +35,7 @@ select_expr_list:
 
 * `where_conditions`：指定筛选条件，查询结果中仅包含满足条件的数据，为可选项。
 
-更多 DBLink 相关的查询语句，参见 [SIMPLE SELECT](../../../4.development-guide-refactoring/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/2.dml-of-oracle-mode/5.select-of-oracle-mode/1.simple-select-of-oracle-mode.md)。
+更多 DBLink 相关的查询语句，参见 [SIMPLE SELECT](../../../../4.development-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/2.dml-of-oracle-mode/5.select-of-oracle-mode/1.simple-select-of-oracle-mode.md)。
 
 通过名为 `my_link` 的 DBLink 查询远端数据库中表 `tbl1` 的数据的示例如下：
 
