--- a/zh-CN/7.reference/4.development-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/20.analyze-of-mysql-mode.md
+++ b/zh-CN/7.reference/4.development-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/20.analyze-of-mysql-mode.md
@@ -45,7 +45,7 @@ column:
 |  参数             |       描述        |
 |----------------------------|----------|
 | table_name |指定要分析的表。|
-| INT_NUM | 整数，即 Buckets 的个数。有关 Buckets 的取值，请参见 [method_opt](../../../../3.performance-tuning-guide/5.sql-optimization/4.sql-optimization-1/4.optimizer-statistics/2.statistics-collection-methods/3.collect-statistics-manually.md)。|
+| INT_NUM | 整数，即 Buckets 的个数。有关 Buckets 的取值，请参见 [method_opt](../../../../3.performance-tuning-guide/5.sql-optimization/4.sql-optimization/4.optimizer-statistics/2.statistics-collection-methods/3.collect-statistics-manually.md)。|
 | use_partition | 指定分区名，如果指定为表名，则不收集分区统计信息。 |
 | compute_statistics_clause  | 指定 `COMPUTE STATISTICS` 可以计算分析对象的精确统计信息，并将其存储在数据字典中。分析表时，会同时统计表和列的统计信息。 |
 | for_clause                 | 指定要分析整个表，或者只分析特定的列。 <ul><li> `FOR TABLE`：指定仅收集表的统计信息。   <li> `FOR COLUMNS`：指定仅收集指定列和标量对象属性列的统计信息。其中，`attribute` 指定对象中的特定列名。   <li> `FOR ALL COLUMNS`：指定收集所有列和标量对象属性列的统计信息。   <li> `FOR ALL INDEXED COLUMNS`：指定收集所有索引列的列统计信息。列统计信息可以基于完整的列，也可以通过指定 `SIZE` 使用直方图。   <li> `FOR ALL HIDDEN COLUMNS`：指定收集所有隐藏列的列统计信息。列统计信息可以基于完整的列，也可以通过指定 `SIZE` 使用直方图。   <li> `SIZE`：指定直方图中的最大存储桶数。取值范围是 \[1,2048\]，默认值是 `256`。 </ul>   |
