--- a/zh-CN/6.manage/4.high-availability/3.physical-standby-database-disaster-recovery/2.create-a-standby-tenant.md
+++ b/zh-CN/6.manage/4.high-availability/3.physical-standby-database-disaster-recovery/2.create-a-standby-tenant.md
@@ -19,7 +19,7 @@
 
   2. 主租户已开启租户的数据备份功能，并完成了一次全量备份。
 
-     发起租户全量数据备份的相关操作，请参见 [发起数据备份](../2.backup-and-restoration-management/4.data-backup/2.initiate-full-data-backup.md)。
+     发起租户全量数据备份的相关操作，请参见 [发起数据备份](../../6.backup-and-recovery/4.data-backup/2.initiate-full-data-backup.md)。
 
 * 从已有备租户的数据备份和日志归档中恢复出其他备租户的场景
 
@@ -34,7 +34,7 @@
 
   2. 作为恢复源的备租户已开启租户的数据备份功能，并完成了一次全量备份。
 
-     发起租户全量数据备份的相关操作，请参见 [发起数据备份](../2.backup-and-restoration-management/4.data-backup/2.initiate-full-data-backup.md)。
+     发起租户全量数据备份的相关操作，请参见 [发起数据备份](../../6.backup-and-recovery/4.data-backup/2.initiate-full-data-backup.md)。
 
 ## 恢复出备租户
 
@@ -70,7 +70,7 @@
 
    关于 `RESTORE` 命令的更多介绍，请参见 [物理恢复相关参数介绍](../2.backup-and-restoration-management/6.restore-data/7.parameters-of-the-restore.md)
 
-   恢复过程中，可以通过 `oceanbase.CDB_OB_RESTORE_PROGRESS` 视图查看恢复进度，具体操作请参见 [查看恢复进度](../2.backup-and-restoration-management/6.restore-data/4.view-the-restore-progress.md)。
+   恢复过程中，可以通过 `oceanbase.CDB_OB_RESTORE_PROGRESS` 视图查看恢复进度，具体操作请参见 [查看恢复进度](../../6.backup-and-recovery/6.restore-data/4.view-the-restore-progress.md)。
 
 ## 更改新备租户的恢复终点
 
