410 Add system view+modify management log

--- a/zh-CN/7.reference/2.administrator-guide/2.basic-database-management/9.manage-logs/2.log-print-level/1.log-print-level.md
+++ b/zh-CN/7.reference/2.administrator-guide/2.basic-database-management/9.manage-logs/2.log-print-level/1.log-print-level.md
@@ -1,10 +1,10 @@
 # 日志打印级别
 
-OceanBase 数据库通过设置日志模块的日志打印级别来控制写入日志文件的日志数据。
+ OceanBase 数据库通过设置日志模块的日志打印级别来控制写入日志文件的日志数据。
 
 ## 日志打印级别
 
-`observer.log` 、`election.log` 和 `rootservice.log` 日志文件的默认打印级别为 INFO 级别，即只有 INFO 及以上级别的日志数据才会打印到该日志文件中。`observer.log.wf` 、`election.log.wf` 、`rootservice.log.wf` 日志文件的打印级别为 WARN 级别，即只有 WARN 及以上级别的日志数据才会打印到该日志文件中。例如：`observer.log.wf` 只记录 `observer.log` 日志文件中的日志级别在 WARN 级别以上的日志。
+`observer.log`、`observer.log.wf`、`election.log` `election.log.wf`、`rootservice.log` 和  `rootservice.log.wf` 日志文件的默认打印级别均为 WDIAG 级别，即只有 WDIAG 及以上级别的日志数据才会打印到该日志文件中。
 
 ## 查看当前的日志打印级别
 
@@ -15,9 +15,9 @@ obclient> SHOW PARAMETERS LIKE '%syslog_level%';
 +-------+----------+-----------------+----------+--------------+-----------+-------+------------------------------------------------------------------------------------------------------------------------+----------+---------+---------+-------------------+
 | zone  | svr_type | svr_ip          | svr_port | name         | data_type | value | info                                                                                                                   | section  | scope   | source  | edit_level        |
 +-------+----------+-----------------+----------+--------------+-----------+-------+------------------------------------------------------------------------------------------------------------------------+----------+---------+---------+-------------------+
-| zone1 | observer | XXX.XXX.XXX.XXX |     2882 | syslog_level | NULL      | INFO  | specifies the current level of logging. There are DEBUG, TRACE, INFO, WARN, USER_ERR, ERROR, six different log levels. | OBSERVER | CLUSTER | DEFAULT | DYNAMIC_EFFECTIVE |
+| zone1 | observer | XXX.XXX.XXX.XXX |     2882 | syslog_level | NULL      | WDIAG  | specifies the current level of logging for obesi. There are DEBUG, TRACE, WDIAG, EDIAG, INFO, WARN, ERROR, seven different log levels. | OBSERVER | CLUSTER | DEFAULT | DYNAMIC_EFFECTIVE |
 +-------+----------+-----------------+----------+--------------+-----------+-------+------------------------------------------------------------------------------------------------------------------------+----------+---------+---------+-------------------+
-1 row in set (0.01 sec)
+1 row in set
 ```
 
   <main id="notice" type='explain'>
