--- a/zh-CN/7.reference/2.administrator-guide/2.basic-database-management/9.manage-logs/2.log-print-level/2.set-log-print-level.md
+++ b/zh-CN/7.reference/2.administrator-guide/2.basic-database-management/9.manage-logs/2.log-print-level/2.set-log-print-level.md
@@ -41,7 +41,7 @@
 
 * 通过语句级别设置日志模块的级别。
 
-  可以通过 Hint 设置语句级别的日志级别。例如：设置 SQL 模块的日志级别为 `debug`，设置 COMMON 模块的日志级别为 `info`。更多 Hint 语句相关的介绍，请参见 [Optimizer Hint](../../../../3.performance-tuning-guide/5.sql-optimization/4.sql-optimization/7.manage-execution-plans/1.optimizer-hint.md)。
+  可以通过 Hint 设置语句级别的日志级别。例如：设置 SQL 模块的日志级别为 `debug`，设置 COMMON 模块的日志级别为 `info`。更多 Hint 语句相关的介绍，请参见《 SQL 调优指南》中的 **Optimizer Hint** 。
 
   ```sql
   obclient > SELECT /*+log_level('sql.*:debug, common.*:info')*/ * FROM t;
