--- a/zh-CN/7.reference/2.administrator-guide/2.basic-database-management/9.manage-logs/1.log-overview.md
+++ b/zh-CN/7.reference/2.administrator-guide/2.basic-database-management/9.manage-logs/1.log-overview.md
@@ -16,19 +16,20 @@ OceanBase 数据库日志模块所属的日志文件分为 `observer.log` 、`el
 |-----------------------------------------------------------|------------------------------------|
 | 启动和运行日志（ `observer.log` 、`observer.log.wf` ）              | OBServer 服务器的 `$work_dir/log` 目录下。 |
 | 选举模块日志（ `election.log` 、`election.log.wf` ）               | OBServer 服务器的 `$work_dir/log` 目录下。 |
-| Root Service 日志（ `rootservice.log` 、`rootservice.log.wf` ） | OBServer 服务器的 `$work_dir/log` 目录下。 |
+| RootService 日志（ `rootservice.log` 、`rootservice.log.wf` ） | OBServer 服务器的 `$work_dir/log` 目录下。 |
 
 ## 日志级别
 
 OceanBase 数据库日志划分了六个日志级别，含义如下表所示。表中的日志级别从高到低依次排列。
 
-|    日志级别    |                        含义                         |
-|------------|---------------------------------------------------|
+|    日志级别    |                        含义                                                  |
+|------------|--------------------------------------------------------------------------------|
 | ERROR      | 严重错误。用于记录系统的故障信息，且必须进行故障排除，否则系统不可用。               |
-| USER_ERROR | 用户输入导致的错误。                                        |
-| WARN       | 警告。用于记录可能会出现的潜在错误。                                |
-| INFO       | 提示。用于记录系统运行的当前状态，该信息为正常信息。                        |
-| TRACE      | 与 INFO 相比更细致化地记录事件消息。                             |
+| WARN       | 警告。系统能继续提供服务，但行为可能不符合预期，或可能将有严重错误发生，需进行故障排除。  |
+| INFO       | 提示。用于记录系统运行的当前状态，该信息为正常信息。                                |
+| EDIAG      | Error Diagnosis, 协助故障排查的诊断信息，通常为 OceanBase 数据库程序的 Bug。       |
+| WDIAG      | Warning Diagnosis, 协助故障排查的诊断信息，预期内的错误，OceanBase 数据库能进行容错。|
+| TRACE      | 务级调试信息。                                                                  |
 | DEBUG      | 调试信息。用于调试时更详细地了解系统运行状态，包括当前调用的函数名、参数、变量、函数调用返回值等。 |
 
 ## 日志数据格式
