--- a/zh-CN/6.manage/4.high-availability/3.physical-standby-database-disaster-recovery/5.adjust-the-log-synchronization-performance-of-the-standby-tenant.md
+++ b/zh-CN/6.manage/4.high-availability/3.physical-standby-database-disaster-recovery/5.adjust-the-log-synchronization-performance-of-the-standby-tenant.md
@@ -39,7 +39,7 @@
      ALTER SYSTEM SET log_restore_concurrency = 5 TENANT = ALL;
      ```
 
-   有关配置项 `log_restore_concurrency` 的更多信息，请参见 [log_restore_concurrency](暂时无法添加链接)。
+   有关配置项 `log_restore_concurrency` 的更多信息，请参见 [log_restore_concurrency](../../../7.reference/5.system-reference/1.system-configuration-items/3.cluster-level-configuration-items/249.log_restore_concurrency.md)。
 
 ## 相关文档
 
