--- a/zh-CN/6.manage/6.backup-and-recovery/6.restore-data/2.initiate-the-tenant-restore.md
+++ b/zh-CN/6.manage/6.backup-and-recovery/6.restore-data/2.initiate-the-tenant-restore.md
@@ -60,7 +60,7 @@
 
    * `restore_option` 支持指定 `pool_list`、`locality`、`primary_zone`、`kms_encrypt`, 其中 `pool_list` 为必选项, 其余为可选项。
 
-   语句中各参数的详细说明请参见 [恢复参数](7.parameters-of-the-restore.md)。
+   语句中各参数的详细说明请参见 [物理恢复相关参数介绍](8.parameters-of-the-restore.md)。
 
    恢复示例如下：
 
