--- a/zh-CN/6.manage/6.backup-and-recovery/6.restore-data/6.active-standby-tenant.md
+++ b/zh-CN/6.manage/6.backup-and-recovery/6.restore-data/6.active-standby-tenant.md
@@ -35,7 +35,7 @@
    obclient [(none)]> ALTER SYSTEM ACTIVATE STANDBY TENANT mysql;
    ```
 
-   命令中各参数的说明请参见 [恢复参数](8.parameters-of-the-restore.md)。
+   命令中各参数的说明请参见 [物理恢复相关参数介绍](8.parameters-of-the-restore.md)。
 
 ## 用户租户将备租户转为主租户
 
