--- a/zh-CN/7.reference/2.administrator-guide/7.management/1.1.resource-isolation/2.resource-isolation-of-oracle-mode/4.update-a-plan-directive-of-oracle-mode.md
+++ b/zh-CN/7.reference/2.administrator-guide/7.management/1.1.resource-isolation/2.resource-isolation-of-oracle-mode/4.update-a-plan-directive-of-oracle-mode.md
@@ -62,10 +62,10 @@
    obclient [SYS]> SELECT * FROM DBA_OB_RSRC_IO_DIRECTIVES;
    ```
 
-   有关 `DBA_RSRC_PLAN_DIRECTIVES` 视图的详细介绍请参见 [DBA_RSRC_PLAN_DIRECTIVES](../../../../12.reference-guide/5.system-view-oracle-mode/2.dictionary-view-1/116.DBA_RSRC_PLAN_DIRECTIVES.md)。
+   有关 `DBA_RSRC_PLAN_DIRECTIVES` 视图的详细介绍请参见 [DBA_RSRC_PLAN_DIRECTIVES](../../../../5.system-reference/5.system-view-of-oracle-mode/2.dictionary-view-of-oracle-mode/125.dba_rsrc_plan_directives-of-oracle-mode.md)。
 
    有关 `DBA_OB_RSRC_IO_DIRECTIVES` 视图的详细介绍，请参见 [DBA_OB_RSRC_IO_DIRECTIVES](新增视图暂时无法添加链接)。
 
 ## 相关文档
 
-[UPDATE_PLAN_DIRECTIVE](../../../7.reference/7.pl-reference/3.pl-oracle/12.pl-system-package/14.DBMS_RESOURCE_MANAGER/9.UPDATE_PLAN_DIRECTIVE.md)
+[UPDATE_PLAN_DIRECTIVE](../../../../4.development-reference/3.pl-reference/3.pl-oracle/14.pl-system-package-oracle/133.dbms-resource-manager-oracle/9.update-plan-directive-oracle.md)
