--- a/zh-CN/6.manage/6.backup-and-recovery/4.data-backup/2.initiate-full-data-backup.md
+++ b/zh-CN/6.manage/6.backup-and-recovery/4.data-backup/2.initiate-full-data-backup.md
@@ -6,9 +6,9 @@
 
 在执行全量数据备份前，您需要进行以下事项：
 
-* 确认当前已开启日志归档，仅当日志归档任务的 `STATUS` 为 `DOING` 时，才能开始数据备份。
+* 确认当前已开启归档模式，仅当日志归档任务的 `STATUS` 为 `DOING` 时，才能开始数据备份。
 
-  开启日志归档的相关操作请参见 [开启日志归档](../3.log-archive/3.initiate-log-archive.md)。
+  开启归档模式的相关操作请参见 [开启归档模式](../3.log-archive/3.open-the-log-archive-mode.md)。
   
 ## 备份准备（可选）
 
@@ -19,8 +19,8 @@
 2. （可选）执行以下命令，设置备份的密码。
 
    <main id="notice" type='explain'>
-      <h4>说明</h4>
-      <p>该密码为备份后的备份集的密码。如果设置了该选项，在使用该备份集进行恢复时，需要输入该密码，且该密码不能被删除。</p>
+   <h4>说明</h4>
+   <p>该密码为备份后的备份集的密码。如果设置了该选项，在使用该备份集进行恢复时，需要输入该密码，且该密码不能被删除。</p>
    </main>
 
    ```shell
@@ -34,8 +34,8 @@
    ```
 
    <main id="notice" type='explain'>
-      <h4>说明</h4>
-      <p>设置备份密码后，在未发起数据备份前，您可以通过断开会话再重新连接数据库的方式取消本次设置。</p>
+   <h4>说明</h4>
+   <p>设置备份密码后，在未发起数据备份前，您可以通过断开会话再重新连接数据库的方式取消本次设置。</p>
    </main>
 
 ## 发起全量备份
