fix broken link

--- a/zh-CN/7.reference/4.development-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/4.functions-of-mysql-mode/5.encryption-and-compression-functions-of-mysql-mode/6.des-encrypt-of-mysql-mode.md
+++ b/zh-CN/7.reference/4.development-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/4.functions-of-mysql-mode/5.encryption-and-compression-functions-of-mysql-mode/6.des-encrypt-of-mysql-mode.md
@@ -23,8 +23,8 @@ new_len = orig_len + (8 - (orig_len % 8)) + 1
 DES 密钥文件中的每一行的格式为 `key_num des_key_str_`。每个 `key_num` 值必须是 0 到 9 范围内的数字。文件中的行可以按任何顺序排列。`des_key_str` 是用于加密信息的字符串。 数字和密钥之间至少应有一个空格。如果您没有为 `DES_ENCRYPT()` 指定任何密钥参数，则第一个密钥作为默认密钥。
 
 <main id="notice" type='explain'>
-   <h4>说明</h4>
-   <p>OceanBase 数据库当前版本还不支持用 `--des_key_file` 编辑 DES 密钥文件，所以目前 `DES_ENCRYPT()` 和 `DES_DECRYPT()` 从密钥文件中读到的密钥是和 MySQL 8.0 的默认密钥文件一样的。 </p>
+  <h4>说明</h4>
+  <p>OceanBase 数据库当前版本还不支持用 <code>--des_key_file</code> 编辑 DES 密钥文件，所以目前 <code>DES_ENCRYPT()</code> 和 <code>DES_DECRYPT()</code> 从密钥文件中读到的密钥是和 MySQL 8.0 的默认密钥文件一样的。 </p>
 </main>
 
 ## 示例
