--- a/zh-CN/7.reference/4.development-reference/3.pl-reference/3.pl-oracle/14.pl-system-package-oracle/185.dbms-xa-oracle/12.xa-settimeout-oracle.md
+++ b/zh-CN/7.reference/4.development-reference/3.pl-reference/3.pl-oracle/14.pl-system-package-oracle/185.dbms-xa-oracle/12.xa-settimeout-oracle.md
@@ -34,7 +34,7 @@ RETURN PLS_INTEGER;
 返回值 
 ------------
 
-请参见 [DBMS_XA 可能的常量返回值](2.dbms_xa-constant.md)。
+请参见 [DBMS_XA 可能的常量返回值](2.dbms-xa-constant-oracle.md)。
 
 可能返回的值是：`XA_OK`、`XAER_RMERR`、`XAER_RMFAIL` 或 `XAER_INVAL`。
 
