--- a/zh-CN/7.reference/3.performance-tuning-guide/5.sql-optimization/4.sql-optimization/2.optimize-sql-statements.md
+++ b/zh-CN/7.reference/3.performance-tuning-guide/5.sql-optimization/4.sql-optimization/2.optimize-sql-statements.md
@@ -4,7 +4,7 @@
 
 1. 通过全局 SQL 审计表 `(G)V$OB_SQL_AUDIT`、 SQL Trace 和计划缓存视图查看 SQL 执行性能信息，初步查找 SQL 请求的流程中导致耗时或消耗资源（如内存、磁盘 IO 等）的 SQL。请参见示例 [查询某段时间内执行时间排名 TOP N 的请求](3.monitor-sql-execution-performance/4.sql-performance-analysis-example/10.query-the-top-n-requests-with-the-most-execution-time.md)。
 
-   关于 SQL 性能分析，请参见 [SQL 执行性能监控](3.monitor-sql-execution-performance/1.gv-ob_sql_audit.md)。
+   关于 SQL 性能分析，请参见 [SQL 执行性能监控](3.monitor-sql-execution-performance/1.gv-ob-sql-audit.md)。
 
 2. 单条 SQL 的执行性能往往与该 SQL 的执行计划相关，因此，执行计划的分析是最重要的手段。通过执行 `EXPALIN` 命令查看优化器针对给定 SQL 生成的逻辑执行计划，确定可能的调优方向。请参见示例 [查看执行计划形状并做分析](3.monitor-sql-execution-performance/4.sql-performance-analysis-example/3.view-and-analyze-the-execution-plan.md)。
 
