--- a/zh-CN/7.reference/4.development-reference/3.pl-reference/3.pl-oracle/14.pl-system-package-oracle/185.dbms-xa-oracle/11.xa-rollback-oracle.md
+++ b/zh-CN/7.reference/4.development-reference/3.pl-reference/3.pl-oracle/14.pl-system-package-oracle/185.dbms-xa-oracle/11.xa-rollback-oracle.md
@@ -27,14 +27,14 @@ DBMS_XA.XA_ROLLBACK (
 
 | **参数** |                                **解释**                                |
 |--------|----------------------------------------------------------------------|
-| xid    | 请参见 [DBMS_XA_XID 对象类型](3.the-type-of-the-dbms_xa_xid-object.md)。 |
+| xid    | 请参见 [DBMS_XA_XID 对象类型](3.the-type-of-the-dbms-xa-xid-object-oracle.md)。 |
 
 
 
 返回值 
 ------------
 
-请参见 [DBMS_XA 可能的常量返回值](2.dbms_xa-constant.md)。
+请参见 [DBMS_XA 可能的常量返回值](2.dbms-xa-constant-oracle.md)。
 
 可能返回的值是：`XA_OK`、`XA_RB\*`、`XA_HEURHAZ`、`XA_HEURCOM`、`XA_HEURRB` 或 `XA_HEURMIX`。
 
